--- a/tr/dopplerultrason/index.html
+++ b/tr/dopplerultrason/index.html
@@ -9,14 +9,14 @@
   <meta http-equiv="Page-Enter" content="BlendTrans(Duration"="0)" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <title>Doppler ve Ultrasonografi Hizmeti</title>
-  <meta name="description" content="Doppler ve Ultrasonografi görüntüleme hizmetleri. Uzman radyolog kadromuzla kaliteli tanısal görüntüleme ve raporlama." />
-  <meta name="keywords" content="doppler ultrasonografi, ultrasonografi hizmetleri, radyoloji görüntüleme, doppler tetkiki, ultrason raporlama" />
+  <meta name="description" content="[object Object]" />
+  <meta name="keywords" content="[object Object]" />
   <meta property="og:title" content="Doppler ve Ultrasonografi Hizmeti" />
-  <meta property="og:description" content="Doppler ve Ultrasonografi görüntüleme hizmetleri. Uzman radyolog kadromuzla kaliteli tanısal görüntüleme ve raporlama." />
-  <meta property="og:image" content="https://atlantisradyoloji.com/page/doppler_ultrason/hycz2.jpg" />
+  <meta property="og:description" content="[object Object]" />
+  <meta property="og:image" content="https://atlantisradyoloji.com/page/doppler_ultrason/fmqbz.jpg" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=me7zh" />
-  <link rel="shortcut icon" href="/img/icon.png?v=me7zh" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=jmtzk" />
+  <link rel="shortcut icon" href="/img/icon.png?v=jmtzk" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=me7zh"></script>
-<link rel="stylesheet" href="style.css?v=me7zh">
+  <script type="text/javascript" src="/src/firebase.js?v=jmtzk"></script>
+<link rel="stylesheet" href="style.css?v=jmtzk">
 </head>
 
 <body>
-  <div id="header"><div class="a9zd5">
-  <div class="a9zd5title">
-    <div class="a9zd5titlebody">
-      <div class="a9zd5titlebodytitle">
+  <div id="header"><div class="fr8a6">
+  <div class="fr8a6title">
+    <div class="fr8a6titlebody">
+      <div class="fr8a6titlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="a9zd5titlebodylang">
+      <div class="fr8a6titlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="a9zd5Children">
-    <div class="a9zd5body">
-      <a href="/tr/"><img src="/img/logo.svg?v=me7zh" class="a9zd5bodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="fr8a6Children">
+    <div class="fr8a6body">
+      <a href="/tr/"><img src="/img/logo.svg?v=jmtzk" class="fr8a6bodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="a9zd5menumobil">
+    <div class="fr8a6menumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="a9zd5menulist">
+    <div class="fr8a6menulist">
       <ul>
-        <a href="/tr/" class="a9zd5menuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="a9zd5menuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="a9zd5menuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="a9zd5menuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="a9zd5menuitem">Referanslarımız</a><a href="/tr/iletisim/" class="a9zd5menuitem">İletişim</a>
+        <a href="/tr/" class="fr8a6menuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="fr8a6menuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="fr8a6menuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="fr8a6menuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="fr8a6menuitem">Referanslarımız</a><a href="/tr/iletisim/" class="fr8a6menuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".a9zd5menumobil")
+    .querySelector(".fr8a6menumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".a9zd5menulist");
+      const menu = document.querySelector(".fr8a6menulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,41 +72,29 @@
     });
 </script>
 </div>
-  <div id="content"><div class="ozzmi-title f36">
+  <div id="content"><div class="nj3kf-title f36">
   <span>Doppler ve Ultrasonografi Hizmeti</span>
 </div>
-<div class="ozzmi">
-  <div class="ozzmi-menu-btn">
+<div class="nj3kf">
+  <div class="nj3kf-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="ozzmi-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a class="active"  href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
-  <div class="ozzmi-desc">
+  <div class="nj3kf-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a class="active"  href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
+  <div class="nj3kf-desc">
     
-    <div class="ozzmi-desc-body">
-            <img src="/page/doppler_ultrason/hycz2.jpg?v=me7zh" width="100%" alt="{{title}}" />
+    <div class="nj3kf-desc-body">
+            <img src="/page/doppler_ultrason/fmqbz.jpg?v=jmtzk" width="100%" alt="{{title}}" />
     </div>
-    <div class="ozzmi-body"><p><h2 style="font-size: 24px;">DOPPLER VE ULTRASONOGRAFİ HİZMETİ</h2></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Doppler ve Ultrasonografi görüntüleme hizmetleri kapsamında, uzman radyolog kadromuzla kaliteli tanısal görüntüleme ve raporlama hizmetleri sunmaktayız. Firmamız 23 yıllık deneyim ve birikimi ile bu sektörde bilgi ve birikimi en profesyonel şekilde çalışan 40 Doktor, 40 Tıbbi Sekreter ve 5 Teknik personelden oluşan güçlü kadrosu ile hizmet vermektedir. Doppler ultrasonografi, kan akımını değerlendirmek için kullanılan özel bir ultrasonografi tekniğidir.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Ultrasonografi, ses dalgalarını kullanarak vücudun iç yapılarını görüntüleme tekniğidir. Bu yöntem, radyasyon içermediği için güvenli bir görüntüleme yöntemidir ve hamilelik döneminde bile güvenle kullanılabilir. Doppler ultrasonografi ise, kan akımının yönünü, hızını ve özelliklerini değerlendirmek için kullanılan gelişmiş bir tekniktir. Bu teknik, damarlardaki tıkanıklıkları, daralmaları ve diğer anormallikleri tespit etmek için kullanılır.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Hizmet verdiğimiz hastanelerde çekilmiş Doppler ve Ultrasonografi tetkik imajlarını PACS yazılımı ile teleradyoloji raporlarını dünyanın her yerinden internet üzerinden yapma imkânı sağlıyoruz. Gece, gündüz, hafta sonu, tatil günleri de dahil olmak üzere şehir ya da ülke ayırımı yapmadan 7 gün 24 saat raporlama hizmeti veriyoruz. Acil hastalarda ise 1 saat içerisinde raporlama yapılmakta ve dünyanın her yerine ulaştırılmaktadır.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Doppler ve Ultrasonografi hizmetlerimizde, karaciğer, böbrek, safra kesesi, pankreas, dalak gibi karın içi organların değerlendirilmesi, tiroid bezi, meme, prostat gibi yüzeyel organların incelenmesi, kalp ekokardiyografisi, gebelik takibi, damar hastalıklarının değerlendirilmesi gibi geniş bir yelpazede hizmet sunmaktayız. Uzman radyolog kadromuz, her türlü Doppler ve Ultrasonografi tetkikini en yüksek kalite standartlarında değerlendirerek detaylı raporlar hazırlamaktadır.</p>
-<p>    </p></p></div>
+    <div class="nj3kf-body"></div>
   </div>
 </div>
 
 <script>
   document
-    .querySelector(".ozzmi-menu-btn")
+    .querySelector(".nj3kf-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".ozzmi-menu").classList.toggle("active");
+      document.querySelector(".nj3kf-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -172,7 +160,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=me7zh"></script>
-<script src="/src/cookie.js?v=me7zh"></script>
+<script type="text/javascript" src="/src/js.js?v=jmtzk"></script>
+<script src="/src/cookie.js?v=jmtzk"></script>
 
 </html>
