--- a/tr/e-katalog/index.html
+++ b/tr/e-katalog/index.html
@@ -15,8 +15,8 @@
   <meta property="og:description" content="Atlantis Radyoloji e-katalog - Radyoloji cihazları, hizmetler ve çözümlerin detaylı kataloğu." />
   <meta property="og:image" content="https://atlantisradyoloji.com/img/icon.png" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=wsoq3" />
-  <link rel="shortcut icon" href="/img/icon.png?v=wsoq3" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=pjfe4" />
+  <link rel="shortcut icon" href="/img/icon.png?v=pjfe4" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=wsoq3"></script>
-<link rel="stylesheet" href="style.css?v=wsoq3">
+  <script type="text/javascript" src="/src/firebase.js?v=pjfe4"></script>
+<link rel="stylesheet" href="style.css?v=pjfe4">
 </head>
 
 <body>
-  <div id="header"><div class="vpuy9">
-  <div class="vpuy9title">
-    <div class="vpuy9titlebody">
-      <div class="vpuy9titlebodytitle">
+  <div id="header"><div class="ws4tl">
+  <div class="ws4tltitle">
+    <div class="ws4tltitlebody">
+      <div class="ws4tltitlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="vpuy9titlebodylang">
+      <div class="ws4tltitlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="vpuy9Children">
-    <div class="vpuy9body">
-      <a href="/tr/"><img src="/img/logo.svg?v=wsoq3" class="vpuy9bodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="ws4tlChildren">
+    <div class="ws4tlbody">
+      <a href="/tr/"><img src="/img/logo.svg?v=pjfe4" class="ws4tlbodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="vpuy9menumobil">
+    <div class="ws4tlmenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="vpuy9menulist">
+    <div class="ws4tlmenulist">
       <ul>
-        <a href="/tr/" class="vpuy9menuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="vpuy9menuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="vpuy9menuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="vpuy9menuitem vpuy9menuactive">E-Katalog</a><a href="/tr/referanslarimiz/" class="vpuy9menuitem">Referanslarımız</a><a href="/tr/iletisim/" class="vpuy9menuitem">İletişim</a>
+        <a href="/tr/" class="ws4tlmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="ws4tlmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="ws4tlmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="ws4tlmenuitem ws4tlmenuactive">E-Katalog</a><a href="/tr/referanslarimiz/" class="ws4tlmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="ws4tlmenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".vpuy9menumobil")
+    .querySelector(".ws4tlmenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".vpuy9menulist");
+      const menu = document.querySelector(".ws4tlmenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -125,7 +125,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=wsoq3"></script>
-<script src="/src/cookie.js?v=wsoq3"></script>
+<script type="text/javascript" src="/src/js.js?v=pjfe4"></script>
+<script src="/src/cookie.js?v=pjfe4"></script>
 
 </html>
