--- a/tr/hakkimizda/index.html
+++ b/tr/hakkimizda/index.html
@@ -15,8 +15,8 @@
   <meta property="og:description" content="ATLANTİS RADYOLOJİ - 23 yıllık deneyimle teleradyoloji sektöründe öncü firma. 40 doktor, 40 tıbbi sekreter kadrosu ile 5 milyon raporlama gerçekleştirdi." />
   <meta property="og:image" content="https://atlantisradyoloji.com/img/icon.png" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=je2a0" />
-  <link rel="shortcut icon" href="/img/icon.png?v=je2a0" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=yu6xf" />
+  <link rel="shortcut icon" href="/img/icon.png?v=yu6xf" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=je2a0"></script>
-<link rel="stylesheet" href="style.css?v=je2a0">
+  <script type="text/javascript" src="/src/firebase.js?v=yu6xf"></script>
+<link rel="stylesheet" href="style.css?v=yu6xf">
 </head>
 
 <body>
-  <div id="header"><div class="aygzz">
-  <div class="aygzztitle">
-    <div class="aygzztitlebody">
-      <div class="aygzztitlebodytitle">
+  <div id="header"><div class="estt8">
+  <div class="estt8title">
+    <div class="estt8titlebody">
+      <div class="estt8titlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="aygzztitlebodylang">
+      <div class="estt8titlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="aygzzChildren">
-    <div class="aygzzbody">
-      <a href="/tr/"><img src="/img/logo.svg?v=je2a0" class="aygzzbodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="estt8Children">
+    <div class="estt8body">
+      <a href="/tr/"><img src="/img/logo.svg?v=yu6xf" class="estt8bodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="aygzzmenumobil">
+    <div class="estt8menumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="aygzzmenulist">
+    <div class="estt8menulist">
       <ul>
-        <a href="/tr/" class="aygzzmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="aygzzmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="aygzzmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="aygzzmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="aygzzmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="aygzzmenuitem">İletişim</a>
+        <a href="/tr/" class="estt8menuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="estt8menuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="estt8menuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="estt8menuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="estt8menuitem">Referanslarımız</a><a href="/tr/iletisim/" class="estt8menuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".aygzzmenumobil")
+    .querySelector(".estt8menumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".aygzzmenulist");
+      const menu = document.querySelector(".estt8menulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,18 +72,18 @@
     });
 </script>
 </div>
-  <div id="content"><div class="u8ktr-title f36">
+  <div id="content"><div class="kyk2j-title f36">
   <span>Hakkımızda</span>
 </div>
-<div class="u8ktr">
-  <div class="u8ktr-menu-btn">
+<div class="kyk2j">
+  <div class="kyk2j-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="u8ktr-menu"><a class="active"  href="/tr/hakkimizda" >Hakkımızda</a><a   href="/tr/misyon" >Misyon</a><a   href="/tr/vizyon" >Vizyon</a><a   href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a   href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a   href="/tr/kisisel-veriler" >Kişisel Veriler</a><a   href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a   href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
-  <div class="u8ktr-desc">
+  <div class="kyk2j-menu"><a class="active"  href="/tr/hakkimizda" >Hakkımızda</a><a   href="/tr/misyon" >Misyon</a><a   href="/tr/vizyon" >Vizyon</a><a   href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a   href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a   href="/tr/kisisel-veriler" >Kişisel Veriler</a><a   href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a   href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
+  <div class="kyk2j-desc">
     
-    <div class="u8ktr-body"><p><h2 style="font-size: 24px;">ATLANTİS RADYOLOJİ HAKKIMIZDA</h2></p>
+    <div class="kyk2j-body"><p><h2 style="font-size: 24px;">ATLANTİS RADYOLOJİ HAKKIMIZDA</h2></p>
 <p>    <p style="font-size: 16px;"></p>
 <p>        ATLANTİS RADYOLOJİ GÖRÜNTÜLEME SAĞLIK HİZMETLERİ LİMİTED ŞİRKETİ, dünyada hızla gelişmekte olan tanısal görüntüleme imajlarının paylaşımı ve arşivleme konusunda ülkemizdeki ihtiyaçları karşılamak ve en doğru tanısal raporların oluşturulması için konusunda deneyimli radyoloji uzmanlarımız ve raporörlerimizin bir araya gelmesi ile kurulmuştur. Firmamız, hizmet verdiğimiz hastanelerde çekilmiş MRI (Manyetik Rezonans Görüntüleme), MRI anjiyografi, BT (Bilgisayarlı Tomografi), BT Anjiyografi, mamografi, Dijital Röntgen ve Sintigrafi (Nükleer Tıp) tetkik imajlarını dünyada bulunan görüntü transferi ve raporlama da kullanılan PACS yazılımı ile teleradyoloji raporlarını dünyanın her yerinden internet üzerinden yapma imkânı sağlıyor.</p>
 <p>    </p></p>
@@ -98,9 +98,9 @@
 
 <script>
   document
-    .querySelector(".u8ktr-menu-btn")
+    .querySelector(".kyk2j-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".u8ktr-menu").classList.toggle("active");
+      document.querySelector(".kyk2j-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -166,7 +166,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=je2a0"></script>
-<script src="/src/cookie.js?v=je2a0"></script>
+<script type="text/javascript" src="/src/js.js?v=yu6xf"></script>
+<script src="/src/cookie.js?v=yu6xf"></script>
 
 </html>
