--- a/tr/kisisel-veriler/index.html
+++ b/tr/kisisel-veriler/index.html
@@ -15,8 +15,8 @@
   <meta property="og:description" content="Atlantis Radyoloji kişisel veri politikası - KVKK uyumlu kişisel veri işleme ve koruma süreçleri." />
   <meta property="og:image" content="https://atlantisradyoloji.com/img/icon.png" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=yck8b" />
-  <link rel="shortcut icon" href="/img/icon.png?v=yck8b" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=ny8hu" />
+  <link rel="shortcut icon" href="/img/icon.png?v=ny8hu" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=yck8b"></script>
-<link rel="stylesheet" href="style.css?v=yck8b">
+  <script type="text/javascript" src="/src/firebase.js?v=ny8hu"></script>
+<link rel="stylesheet" href="style.css?v=ny8hu">
 </head>
 
 <body>
-  <div id="header"><div class="xwqrv">
-  <div class="xwqrvtitle">
-    <div class="xwqrvtitlebody">
-      <div class="xwqrvtitlebodytitle">
+  <div id="header"><div class="uv0sa">
+  <div class="uv0satitle">
+    <div class="uv0satitlebody">
+      <div class="uv0satitlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="xwqrvtitlebodylang">
+      <div class="uv0satitlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="xwqrvChildren">
-    <div class="xwqrvbody">
-      <a href="/tr/"><img src="/img/logo.svg?v=yck8b" class="xwqrvbodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="uv0saChildren">
+    <div class="uv0sabody">
+      <a href="/tr/"><img src="/img/logo.svg?v=ny8hu" class="uv0sabodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="xwqrvmenumobil">
+    <div class="uv0samenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="xwqrvmenulist">
+    <div class="uv0samenulist">
       <ul>
-        <a href="/tr/" class="xwqrvmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="xwqrvmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="xwqrvmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="xwqrvmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="xwqrvmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="xwqrvmenuitem">İletişim</a>
+        <a href="/tr/" class="uv0samenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="uv0samenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="uv0samenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="uv0samenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="uv0samenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="uv0samenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".xwqrvmenumobil")
+    .querySelector(".uv0samenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".xwqrvmenulist");
+      const menu = document.querySelector(".uv0samenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,18 +72,18 @@
     });
 </script>
 </div>
-  <div id="content"><div class="tqarp-title f36">
+  <div id="content"><div class="hg7k9-title f36">
   <span>Kişisel Veriler</span>
 </div>
-<div class="tqarp">
-  <div class="tqarp-menu-btn">
+<div class="hg7k9">
+  <div class="hg7k9-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="tqarp-menu"><a   href="/tr/hakkimizda" >Hakkımızda</a><a   href="/tr/misyon" >Misyon</a><a   href="/tr/vizyon" >Vizyon</a><a   href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a   href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a class="active"  href="/tr/kisisel-veriler" >Kişisel Veriler</a><a   href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a   href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
-  <div class="tqarp-desc">
+  <div class="hg7k9-menu"><a   href="/tr/hakkimizda" >Hakkımızda</a><a   href="/tr/misyon" >Misyon</a><a   href="/tr/vizyon" >Vizyon</a><a   href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a   href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a class="active"  href="/tr/kisisel-veriler" >Kişisel Veriler</a><a   href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a   href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
+  <div class="hg7k9-desc">
     
-    <div class="tqarp-body"><p><h2 style="font-size: 24px;">Kişisel Veriler</h2></p>
+    <div class="hg7k9-body"><p><h2 style="font-size: 24px;">Kişisel Veriler</h2></p>
 <p>    <p style="font-size: 16px;"></p>
 <p>        Kişisel verileriniz, yalnızca yasal gereklilikleri karşılamak, taleplerinizi yerine getirmek ve size daha iyi hizmet sunmak amacıyla toplanmaktadır. Kişisel verilerinizin güvenliği bizim için önceliklidir ve bu verilerin korunması için 6698 sayılı Kişisel Verilerin Korunması Kanunu (KVKK) başta olmak üzere, ilgili tüm mevzuat çerçevesinde gerekli teknik ve idari tedbirleri almaktayız.</p>
 <p>    </p></p>
@@ -98,9 +98,9 @@
 
 <script>
   document
-    .querySelector(".tqarp-menu-btn")
+    .querySelector(".hg7k9-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".tqarp-menu").classList.toggle("active");
+      document.querySelector(".hg7k9-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -166,7 +166,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=yck8b"></script>
-<script src="/src/cookie.js?v=yck8b"></script>
+<script type="text/javascript" src="/src/js.js?v=ny8hu"></script>
+<script src="/src/cookie.js?v=ny8hu"></script>
 
 </html>
