--- a/tr/kurumsal/index.html
+++ b/tr/kurumsal/index.html
@@ -15,8 +15,8 @@
   <meta property="og:description" content="ATLANTİS RADYOLOJİ GÖRÜNTÜLEME SAĞLIK HİZMETLERİ LİMİTED ŞİRKETİ - 23 yıllık deneyimle teleradyoloji sektöründe öncü firma." />
   <meta property="og:image" content="https://atlantisradyoloji.com/img/icon.png" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=mrm8z" />
-  <link rel="shortcut icon" href="/img/icon.png?v=mrm8z" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=kb1kf" />
+  <link rel="shortcut icon" href="/img/icon.png?v=kb1kf" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=mrm8z"></script>
-<link rel="stylesheet" href="style.css?v=mrm8z">
+  <script type="text/javascript" src="/src/firebase.js?v=kb1kf"></script>
+<link rel="stylesheet" href="style.css?v=kb1kf">
 </head>
 
 <body>
-  <div id="header"><div class="a1itf">
-  <div class="a1itftitle">
-    <div class="a1itftitlebody">
-      <div class="a1itftitlebodytitle">
+  <div id="header"><div class="gm9tq">
+  <div class="gm9tqtitle">
+    <div class="gm9tqtitlebody">
+      <div class="gm9tqtitlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="a1itftitlebodylang">
+      <div class="gm9tqtitlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="a1itfChildren">
-    <div class="a1itfbody">
-      <a href="/tr/"><img src="/img/logo.svg?v=mrm8z" class="a1itfbodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="gm9tqChildren">
+    <div class="gm9tqbody">
+      <a href="/tr/"><img src="/img/logo.svg?v=kb1kf" class="gm9tqbodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="a1itfmenumobil">
+    <div class="gm9tqmenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="a1itfmenulist">
+    <div class="gm9tqmenulist">
       <ul>
-        <a href="/tr/" class="a1itfmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="a1itfmenuitem a1itfmenuactive">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="a1itfmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="a1itfmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="a1itfmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="a1itfmenuitem">İletişim</a>
+        <a href="/tr/" class="gm9tqmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="gm9tqmenuitem gm9tqmenuactive">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="gm9tqmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="gm9tqmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="gm9tqmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="gm9tqmenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".a1itfmenumobil")
+    .querySelector(".gm9tqmenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".a1itfmenulist");
+      const menu = document.querySelector(".gm9tqmenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -125,7 +125,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=mrm8z"></script>
-<script src="/src/cookie.js?v=mrm8z"></script>
+<script type="text/javascript" src="/src/js.js?v=kb1kf"></script>
+<script src="/src/cookie.js?v=kb1kf"></script>
 
 </html>
