--- a/tr/misyon/index.html
+++ b/tr/misyon/index.html
@@ -15,8 +15,8 @@
   <meta property="og:description" content="Atlantis Radyoloji misyonu - Teleradyoloji ve uzaktan raporlama hizmetleri ile dünya çapında kaliteli radyoloji hizmetleri sunmak." />
   <meta property="og:image" content="https://atlantisradyoloji.com/img/icon.png" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=upgl7" />
-  <link rel="shortcut icon" href="/img/icon.png?v=upgl7" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=rlwux" />
+  <link rel="shortcut icon" href="/img/icon.png?v=rlwux" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=upgl7"></script>
-<link rel="stylesheet" href="style.css?v=upgl7">
+  <script type="text/javascript" src="/src/firebase.js?v=rlwux"></script>
+<link rel="stylesheet" href="style.css?v=rlwux">
 </head>
 
 <body>
-  <div id="header"><div class="fi9b4">
-  <div class="fi9b4title">
-    <div class="fi9b4titlebody">
-      <div class="fi9b4titlebodytitle">
+  <div id="header"><div class="z05lo">
+  <div class="z05lotitle">
+    <div class="z05lotitlebody">
+      <div class="z05lotitlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="fi9b4titlebodylang">
+      <div class="z05lotitlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="fi9b4Children">
-    <div class="fi9b4body">
-      <a href="/tr/"><img src="/img/logo.svg?v=upgl7" class="fi9b4bodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="z05loChildren">
+    <div class="z05lobody">
+      <a href="/tr/"><img src="/img/logo.svg?v=rlwux" class="z05lobodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="fi9b4menumobil">
+    <div class="z05lomenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="fi9b4menulist">
+    <div class="z05lomenulist">
       <ul>
-        <a href="/tr/" class="fi9b4menuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="fi9b4menuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="fi9b4menuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="fi9b4menuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="fi9b4menuitem">Referanslarımız</a><a href="/tr/iletisim/" class="fi9b4menuitem">İletişim</a>
+        <a href="/tr/" class="z05lomenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="z05lomenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="z05lomenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="z05lomenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="z05lomenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="z05lomenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".fi9b4menumobil")
+    .querySelector(".z05lomenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".fi9b4menulist");
+      const menu = document.querySelector(".z05lomenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,18 +72,18 @@
     });
 </script>
 </div>
-  <div id="content"><div class="z62b8-title f36">
+  <div id="content"><div class="r2qg5-title f36">
   <span>Misyon</span>
 </div>
-<div class="z62b8">
-  <div class="z62b8-menu-btn">
+<div class="r2qg5">
+  <div class="r2qg5-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="z62b8-menu"><a   href="/tr/hakkimizda" >Hakkımızda</a><a class="active"  href="/tr/misyon" >Misyon</a><a   href="/tr/vizyon" >Vizyon</a><a   href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a   href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a   href="/tr/kisisel-veriler" >Kişisel Veriler</a><a   href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a   href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
-  <div class="z62b8-desc">
+  <div class="r2qg5-menu"><a   href="/tr/hakkimizda" >Hakkımızda</a><a class="active"  href="/tr/misyon" >Misyon</a><a   href="/tr/vizyon" >Vizyon</a><a   href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a   href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a   href="/tr/kisisel-veriler" >Kişisel Veriler</a><a   href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a   href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
+  <div class="r2qg5-desc">
     
-    <div class="z62b8-body"><p><h2 style="font-size: 24px;">ATLANTİS RADYOLOJİ MİSYONUMUZ</h2></p>
+    <div class="r2qg5-body"><p><h2 style="font-size: 24px;">ATLANTİS RADYOLOJİ MİSYONUMUZ</h2></p>
 <p>    <p style="font-size: 16px;"></p>
 <p>        Misyonumuz, dünyada hızla gelişmekte olan tanısal görüntüleme imajlarının paylaşımı ve arşivleme konusunda ülkemizdeki ihtiyaçları karşılamak ve en doğru tanısal raporların oluşturulması için konusunda deneyimli radyoloji uzmanlarımız ve raporörlerimizin bir araya gelmesi ile kurulan firmamızın temel amacıdır. Firmamız, hizmet verdiğimiz hastanelerde çekilmiş MRI (Manyetik Rezonans Görüntüleme), MRI anjiyografi, BT (Bilgisayarlı Tomografi), BT Anjiyografi, mamografi, Dijital Röntgen ve Sintigrafi (Nükleer Tıp) tetkik imajlarını PACS yazılımı ile teleradyoloji raporlarını dünyanın her yerinden internet üzerinden yapma imkânı sağlamaktır.</p>
 <p>    </p></p>
@@ -98,9 +98,9 @@
 
 <script>
   document
-    .querySelector(".z62b8-menu-btn")
+    .querySelector(".r2qg5-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".z62b8-menu").classList.toggle("active");
+      document.querySelector(".r2qg5-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -166,7 +166,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=upgl7"></script>
-<script src="/src/cookie.js?v=upgl7"></script>
+<script type="text/javascript" src="/src/js.js?v=rlwux"></script>
+<script src="/src/cookie.js?v=rlwux"></script>
 
 </html>
