--- a/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini/index.html
+++ b/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini/index.html
@@ -9,14 +9,14 @@
   <meta http-equiv="Page-Enter" content="BlendTrans(Duration"="0)" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <title>Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</title>
-  <meta name="description" content="Radyolojik cihazların bakım, onarım ve yedek parça temini. 7/24 teknik destek ve hızlı servis hizmetleri." />
-  <meta name="keywords" content="radyoloji cihaz bakımı, cihaz onarımı, yedek parça, teknik servis, radyoloji bakım hizmetleri" />
+  <meta name="description" content="[object Object]" />
+  <meta name="keywords" content="[object Object]" />
   <meta property="og:title" content="Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini" />
-  <meta property="og:description" content="Radyolojik cihazların bakım, onarım ve yedek parça temini. 7/24 teknik destek ve hızlı servis hizmetleri." />
-  <meta property="og:image" content="https://atlantisradyoloji.com/page/bakim_onarim/jx0sg.jpg" />
+  <meta property="og:description" content="[object Object]" />
+  <meta property="og:image" content="https://atlantisradyoloji.com/page/bakim_onarim/gwame.jpg" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=da9a4" />
-  <link rel="shortcut icon" href="/img/icon.png?v=da9a4" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=y85km" />
+  <link rel="shortcut icon" href="/img/icon.png?v=y85km" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=da9a4"></script>
-<link rel="stylesheet" href="style.css?v=da9a4">
+  <script type="text/javascript" src="/src/firebase.js?v=y85km"></script>
+<link rel="stylesheet" href="style.css?v=y85km">
 </head>
 
 <body>
-  <div id="header"><div class="kp6vx">
-  <div class="kp6vxtitle">
-    <div class="kp6vxtitlebody">
-      <div class="kp6vxtitlebodytitle">
+  <div id="header"><div class="yvity">
+  <div class="yvitytitle">
+    <div class="yvitytitlebody">
+      <div class="yvitytitlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="kp6vxtitlebodylang">
+      <div class="yvitytitlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="kp6vxChildren">
-    <div class="kp6vxbody">
-      <a href="/tr/"><img src="/img/logo.svg?v=da9a4" class="kp6vxbodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="yvityChildren">
+    <div class="yvitybody">
+      <a href="/tr/"><img src="/img/logo.svg?v=y85km" class="yvitybodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="kp6vxmenumobil">
+    <div class="yvitymenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="kp6vxmenulist">
+    <div class="yvitymenulist">
       <ul>
-        <a href="/tr/" class="kp6vxmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="kp6vxmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="kp6vxmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="kp6vxmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="kp6vxmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="kp6vxmenuitem">İletişim</a>
+        <a href="/tr/" class="yvitymenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="yvitymenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="yvitymenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="yvitymenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="yvitymenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="yvitymenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".kp6vxmenumobil")
+    .querySelector(".yvitymenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".kp6vxmenulist");
+      const menu = document.querySelector(".yvitymenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,41 +72,29 @@
     });
 </script>
 </div>
-  <div id="content"><div class="por6a-title f36">
+  <div id="content"><div class="ua4r8-title f36">
   <span>Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</span>
 </div>
-<div class="por6a">
-  <div class="por6a-menu-btn">
+<div class="ua4r8">
+  <div class="ua4r8-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="por6a-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a class="active"  href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
-  <div class="por6a-desc">
+  <div class="ua4r8-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a class="active"  href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
+  <div class="ua4r8-desc">
     
-    <div class="por6a-desc-body">
-            <img src="/page/bakim_onarim/jx0sg.jpg?v=da9a4" width="100%" alt="{{title}}" />
+    <div class="ua4r8-desc-body">
+            <img src="/page/bakim_onarim/gwame.jpg?v=y85km" width="100%" alt="{{title}}" />
     </div>
-    <div class="por6a-body"><p><h2 style="font-size: 24px;">RADYOLOJİK CİHAZLARIN BAKIM, ONARIM VE YEDEK PARÇA TEMİNİ</h2></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Radyolojik cihazların bakım, onarım ve yedek parça temini konusunda uzman ekibimizle hizmet veriyoruz. Firmamız 23 yıllık deneyim ve birikimi ile bu sektörde bilgi ve birikimi en profesyonel şekilde çalışan 40 Doktor, 40 Tıbbi Sekreter ve 5 Teknik personelden oluşan güçlü kadrosu ile hizmet vermektedir. 7/24 teknik destek ve hızlı servis hizmetleri sunarak cihazlarınızın kesintisiz çalışmasını sağlıyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Radyolojik cihaz bakım hizmetlerimizde, MRI, BT, röntgen, mamografi, ultrasonografi, sintigrafi gibi tüm radyolojik cihazların periyodik bakımı, kalibrasyonu, güvenlik kontrolleri gibi konularda uzman ekibimizle hizmet veriyoruz. Deneyimli teknisyen kadromuzla tüm marka ve model radyoloji cihazlarının bakım ve onarımını gerçekleştiriyoruz. Cihazlarınızın ömrünü uzatmak ve performansını artırmak için özel bakım programları uyguluyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Radyolojik cihaz onarım hizmetlerimizde, arıza tespiti, onarım planlaması, yedek parça temini, onarım işlemleri, test ve kalibrasyon gibi süreçleri hızlı ve güvenilir şekilde yürütüyoruz. 7/24 teknik destek hattımızla acil durumlarda hızlı müdahale sağlıyoruz. Hastanelerin ve görüntüleme merkezlerinin cihazlarının kesintisiz çalışması için özel servis programları sunuyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Yedek parça temini hizmetlerimizde, orijinal yedek parçalar, uyumlu yedek parçalar, özel üretim parçalar gibi geniş bir yelpazede yedek parça temini sağlıyoruz. Tüm marka ve model radyoloji cihazları için yedek parça stoğu bulunduruyoruz. Hızlı teslimat ve uygun fiyat garantisi ile yedek parça temini hizmeti veriyoruz. 23 yıllık deneyimimizle radyolojik cihaz bakım, onarım ve yedek parça temininde güvenilir bir partner olarak hizmet veriyoruz.</p>
-<p>    </p></p></div>
+    <div class="ua4r8-body"></div>
   </div>
 </div>
 
 <script>
   document
-    .querySelector(".por6a-menu-btn")
+    .querySelector(".ua4r8-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".por6a-menu").classList.toggle("active");
+      document.querySelector(".ua4r8-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -172,7 +160,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=da9a4"></script>
-<script src="/src/cookie.js?v=da9a4"></script>
+<script type="text/javascript" src="/src/js.js?v=y85km"></script>
+<script src="/src/cookie.js?v=y85km"></script>
 
 </html>
