--- a/tr/btodasi/index.html
+++ b/tr/btodasi/index.html
@@ -9,14 +9,14 @@
   <meta http-equiv="Page-Enter" content="BlendTrans(Duration"="0)" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <title>Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</title>
-  <meta name="description" content="Bilgisayarlı Tomografi odalarının projelendirilmesi ve anahtar teslim yapımı. Güvenli ve modern BT odaları kurulumu." />
-  <meta name="keywords" content="bt odası projelendirme, bilgisayarlı tomografi odası, kurşun kaplama, radyoloji odası yapımı" />
+  <meta name="description" content="[object Object]" />
+  <meta name="keywords" content="[object Object]" />
   <meta property="og:title" content="Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı" />
-  <meta property="og:description" content="Bilgisayarlı Tomografi odalarının projelendirilmesi ve anahtar teslim yapımı. Güvenli ve modern BT odaları kurulumu." />
-  <meta property="og:image" content="https://atlantisradyoloji.com/page/bt_odasi/q3pk4.jpg" />
+  <meta property="og:description" content="[object Object]" />
+  <meta property="og:image" content="https://atlantisradyoloji.com/page/bt_odasi/ucpi4.jpg" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=g35d1" />
-  <link rel="shortcut icon" href="/img/icon.png?v=g35d1" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=rw4k4" />
+  <link rel="shortcut icon" href="/img/icon.png?v=rw4k4" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=g35d1"></script>
-<link rel="stylesheet" href="style.css?v=g35d1">
+  <script type="text/javascript" src="/src/firebase.js?v=rw4k4"></script>
+<link rel="stylesheet" href="style.css?v=rw4k4">
 </head>
 
 <body>
-  <div id="header"><div class="tnll5">
-  <div class="tnll5title">
-    <div class="tnll5titlebody">
-      <div class="tnll5titlebodytitle">
+  <div id="header"><div class="k4h54">
+  <div class="k4h54title">
+    <div class="k4h54titlebody">
+      <div class="k4h54titlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="tnll5titlebodylang">
+      <div class="k4h54titlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="tnll5Children">
-    <div class="tnll5body">
-      <a href="/tr/"><img src="/img/logo.svg?v=g35d1" class="tnll5bodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="k4h54Children">
+    <div class="k4h54body">
+      <a href="/tr/"><img src="/img/logo.svg?v=rw4k4" class="k4h54bodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="tnll5menumobil">
+    <div class="k4h54menumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="tnll5menulist">
+    <div class="k4h54menulist">
       <ul>
-        <a href="/tr/" class="tnll5menuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="tnll5menuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="tnll5menuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="tnll5menuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="tnll5menuitem">Referanslarımız</a><a href="/tr/iletisim/" class="tnll5menuitem">İletişim</a>
+        <a href="/tr/" class="k4h54menuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="k4h54menuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="k4h54menuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="k4h54menuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="k4h54menuitem">Referanslarımız</a><a href="/tr/iletisim/" class="k4h54menuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".tnll5menumobil")
+    .querySelector(".k4h54menumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".tnll5menulist");
+      const menu = document.querySelector(".k4h54menulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,41 +72,29 @@
     });
 </script>
 </div>
-  <div id="content"><div class="iing8-title f36">
+  <div id="content"><div class="d8uju-title f36">
   <span>Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</span>
 </div>
-<div class="iing8">
-  <div class="iing8-menu-btn">
+<div class="d8uju">
+  <div class="d8uju-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="iing8-menu"><a class="active"  href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
-  <div class="iing8-desc">
+  <div class="d8uju-menu"><a class="active"  href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
+  <div class="d8uju-desc">
     
-    <div class="iing8-desc-body">
-            <img src="/page/bt_odasi/q3pk4.jpg?v=g35d1" width="100%" alt="{{title}}" />
+    <div class="d8uju-desc-body">
+            <img src="/page/bt_odasi/ucpi4.jpg?v=rw4k4" width="100%" alt="{{title}}" />
     </div>
-    <div class="iing8-body"><p><h2 style="font-size: 24px;">BİLGİSAYARLI TOMOGRAFİ ODALARININ PROJELENDİRİLMESİ VE YAPIMI</h2></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Bilgisayarlı Tomografi (BT) odalarının projelendirilmesi, kurşun kaplanması ve anahtar teslim yapımı hizmetleri konusunda uzman ekibimizle hizmet veriyoruz. Firmamız 23 yıllık deneyim ve birikimi ile bu sektörde bilgi ve birikimi en profesyonel şekilde çalışan 40 Doktor, 40 Tıbbi Sekreter ve 5 Teknik personelden oluşan güçlü kadrosu ile hizmet vermektedir. BT odalarının projelendirilmesi, radyasyon güvenliği açısından kritik önem taşıyan bir süreçtir.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        BT odalarının projelendirilmesinde, odanın boyutları, kurşun kaplama kalınlığı, havalandırma sistemi, elektrik tesisatı, soğutma sistemi gibi teknik detaylar özenle hesaplanır. Kurşun kaplama, radyasyonun dış ortama yayılmasını önlemek için gerekli olan en önemli güvenlik önlemidir. BT cihazının gücüne göre kurşun kaplama kalınlığı belirlenir ve bu kalınlık standartlara uygun şekilde uygulanır.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Anahtar teslim BT odası yapımı hizmetimizde, projelendirmeden başlayarak, inşaat, kurşun kaplama, elektrik tesisatı, havalandırma sistemi, soğutma sistemi, BT cihazının montajı ve devreye alınmasına kadar tüm süreçleri yönetiyoruz. Uzman ekibimiz, ulusal ve uluslararası standartlara uygun şekilde çalışarak, güvenli ve verimli BT odaları kurulumu gerçekleştiriyoruz. Tüm projelerimizde kalite kontrol süreçlerini titizlikle uygulayarak, müşteri memnuniyetini ön planda tutuyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        BT odalarının projelendirilmesi ve yapımı sürecinde, müşterilerimizin ihtiyaçlarına göre özel çözümler üretiyoruz. Mevcut yapıların güçlendirilmesi, yeni BT odası inşaatı, eski BT odalarının yenilenmesi gibi farklı projelerde deneyimli ekibimizle hizmet veriyoruz. Projelerimizde kullandığımız malzemeler, ulusal ve uluslararası standartlara uygun, kaliteli ve dayanıklı malzemelerdir. BT odası projelerimizde, radyasyon güvenliği, çevre güvenliği ve personel güvenliği önceliklerimizdir.</p>
-<p>    </p></p></div>
+    <div class="d8uju-body"></div>
   </div>
 </div>
 
 <script>
   document
-    .querySelector(".iing8-menu-btn")
+    .querySelector(".d8uju-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".iing8-menu").classList.toggle("active");
+      document.querySelector(".d8uju-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -172,7 +160,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=g35d1"></script>
-<script src="/src/cookie.js?v=g35d1"></script>
+<script type="text/javascript" src="/src/js.js?v=rw4k4"></script>
+<script src="/src/cookie.js?v=rw4k4"></script>
 
 </html>
