--- a/tr/danismanlik-hizmetleri/index.html
+++ b/tr/danismanlik-hizmetleri/index.html
@@ -9,14 +9,14 @@
   <meta http-equiv="Page-Enter" content="BlendTrans(Duration"="0)" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <title>Danışmanlık Hizmetleri</title>
-  <meta name="description" content="Radyoloji alanında uzman danışmanlık hizmetleri. Cihaz seçimi, projelendirme, lisanslama ve teknik destek konularında profesyonel rehberlik." />
-  <meta name="keywords" content="radyoloji danışmanlık, cihaz seçimi, projelendirme danışmanlığı, radyoloji uzmanlık hizmetleri" />
+  <meta name="description" content="[object Object]" />
+  <meta name="keywords" content="[object Object]" />
   <meta property="og:title" content="Danışmanlık Hizmetleri" />
-  <meta property="og:description" content="Radyoloji alanında uzman danışmanlık hizmetleri. Cihaz seçimi, projelendirme, lisanslama ve teknik destek konularında profesyonel rehberlik." />
-  <meta property="og:image" content="https://atlantisradyoloji.com/page/danismanlik/diarv.jpg" />
+  <meta property="og:description" content="[object Object]" />
+  <meta property="og:image" content="https://atlantisradyoloji.com/page/danismanlik/vnj1n.jpg" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=ypy7p" />
-  <link rel="shortcut icon" href="/img/icon.png?v=ypy7p" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=qe6y0" />
+  <link rel="shortcut icon" href="/img/icon.png?v=qe6y0" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=ypy7p"></script>
-<link rel="stylesheet" href="style.css?v=ypy7p">
+  <script type="text/javascript" src="/src/firebase.js?v=qe6y0"></script>
+<link rel="stylesheet" href="style.css?v=qe6y0">
 </head>
 
 <body>
-  <div id="header"><div class="w0ly3">
-  <div class="w0ly3title">
-    <div class="w0ly3titlebody">
-      <div class="w0ly3titlebodytitle">
+  <div id="header"><div class="sbpc9">
+  <div class="sbpc9title">
+    <div class="sbpc9titlebody">
+      <div class="sbpc9titlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="w0ly3titlebodylang">
+      <div class="sbpc9titlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="w0ly3Children">
-    <div class="w0ly3body">
-      <a href="/tr/"><img src="/img/logo.svg?v=ypy7p" class="w0ly3bodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="sbpc9Children">
+    <div class="sbpc9body">
+      <a href="/tr/"><img src="/img/logo.svg?v=qe6y0" class="sbpc9bodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="w0ly3menumobil">
+    <div class="sbpc9menumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="w0ly3menulist">
+    <div class="sbpc9menulist">
       <ul>
-        <a href="/tr/" class="w0ly3menuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="w0ly3menuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="w0ly3menuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="w0ly3menuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="w0ly3menuitem">Referanslarımız</a><a href="/tr/iletisim/" class="w0ly3menuitem">İletişim</a>
+        <a href="/tr/" class="sbpc9menuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="sbpc9menuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="sbpc9menuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="sbpc9menuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="sbpc9menuitem">Referanslarımız</a><a href="/tr/iletisim/" class="sbpc9menuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".w0ly3menumobil")
+    .querySelector(".sbpc9menumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".w0ly3menulist");
+      const menu = document.querySelector(".sbpc9menulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,41 +72,29 @@
     });
 </script>
 </div>
-  <div id="content"><div class="sbnaa-title f36">
+  <div id="content"><div class="om88e-title f36">
   <span>Danışmanlık Hizmetleri</span>
 </div>
-<div class="sbnaa">
-  <div class="sbnaa-menu-btn">
+<div class="om88e">
+  <div class="om88e-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="sbnaa-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a class="active"  href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
-  <div class="sbnaa-desc">
+  <div class="om88e-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a class="active"  href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
+  <div class="om88e-desc">
     
-    <div class="sbnaa-desc-body">
-            <img src="/page/danismanlik/diarv.jpg?v=ypy7p" width="100%" alt="{{title}}" />
+    <div class="om88e-desc-body">
+            <img src="/page/danismanlik/vnj1n.jpg?v=qe6y0" width="100%" alt="{{title}}" />
     </div>
-    <div class="sbnaa-body"><p><h2 style="font-size: 24px;">DANIŞMANLIK HİZMETLERİ</h2></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Radyoloji alanında uzman danışmanlık hizmetleri sunuyoruz. Firmamız 23 yıllık deneyim ve birikimi ile bu sektörde bilgi ve birikimi en profesyonel şekilde çalışan 40 Doktor, 40 Tıbbi Sekreter ve 5 Teknik personelden oluşan güçlü kadrosu ile hizmet vermektedir. Cihaz seçimi, projelendirme, lisanslama ve teknik destek konularında profesyonel rehberlik sağlıyoruz. Radyoloji sektöründeki tüm ihtiyaçlarınıza çözüm üretiyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Danışmanlık hizmetlerimiz kapsamında, hastanelerin ve görüntüleme merkezlerinin radyoloji bölümlerinin kurulması, mevcut bölümlerin modernizasyonu, yeni cihaz alımları, teknik ekipman seçimi, personel eğitimi gibi konularda kapsamlı danışmanlık hizmeti veriyoruz. Radyoloji cihazlarının TAEK (Türkiye Atom Enerji Kurumu) lisanslamada danışmanlık hizmeti de sunduğumuz önemli hizmetler arasındadır.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Cihaz seçimi danışmanlığımızda, hastanenin ihtiyaçlarına uygun MRI, BT, röntgen, mamografi, ultrasonografi cihazlarının seçimi konusunda detaylı analizler yapıyoruz. Projelendirme danışmanlığımızda, radyoloji odalarının tasarımı, kurşun kaplama hesaplamaları, manyetik alan kalkanı tasarımı, elektrik tesisatı, havalandırma sistemi gibi teknik konularda uzman desteği sağlıyoruz. Lisanslama danışmanlığımızda, TAEK lisansı alma süreçlerinde rehberlik ediyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Teknik destek hizmetlerimizde, radyoloji cihazlarının kurulumu, kalibrasyonu, bakımı, onarımı konularında uzman ekibimizle destek sağlıyoruz. Personel eğitimi hizmetlerimizde, radyoloji teknisyenlerinin eğitimi, cihaz kullanımı eğitimi, güvenlik eğitimi gibi konularda kapsamlı eğitim programları düzenliyoruz. 23 yıllık deneyimimizle radyoloji sektöründeki tüm ihtiyaçlarınıza profesyonel çözümler üretiyoruz.</p>
-<p>    </p></p></div>
+    <div class="om88e-body"></div>
   </div>
 </div>
 
 <script>
   document
-    .querySelector(".sbnaa-menu-btn")
+    .querySelector(".om88e-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".sbnaa-menu").classList.toggle("active");
+      document.querySelector(".om88e-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -172,7 +160,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=ypy7p"></script>
-<script src="/src/cookie.js?v=ypy7p"></script>
+<script type="text/javascript" src="/src/js.js?v=qe6y0"></script>
+<script src="/src/cookie.js?v=qe6y0"></script>
 
 </html>
