--- a/tr/gizlilik-politikasi/index.html
+++ b/tr/gizlilik-politikasi/index.html
@@ -15,8 +15,8 @@
   <meta property="og:description" content="Atlantis Radyoloji gizlilik politikası - Kişisel verilerin korunması ve çerez kullanımı hakkında bilgiler." />
   <meta property="og:image" content="https://atlantisradyoloji.com/img/icon.png" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=mdogy" />
-  <link rel="shortcut icon" href="/img/icon.png?v=mdogy" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=viqzu" />
+  <link rel="shortcut icon" href="/img/icon.png?v=viqzu" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=mdogy"></script>
-<link rel="stylesheet" href="style.css?v=mdogy">
+  <script type="text/javascript" src="/src/firebase.js?v=viqzu"></script>
+<link rel="stylesheet" href="style.css?v=viqzu">
 </head>
 
 <body>
-  <div id="header"><div class="q21cg">
-  <div class="q21cgtitle">
-    <div class="q21cgtitlebody">
-      <div class="q21cgtitlebodytitle">
+  <div id="header"><div class="szd5i">
+  <div class="szd5ititle">
+    <div class="szd5ititlebody">
+      <div class="szd5ititlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="q21cgtitlebodylang">
+      <div class="szd5ititlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="q21cgChildren">
-    <div class="q21cgbody">
-      <a href="/tr/"><img src="/img/logo.svg?v=mdogy" class="q21cgbodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="szd5iChildren">
+    <div class="szd5ibody">
+      <a href="/tr/"><img src="/img/logo.svg?v=viqzu" class="szd5ibodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="q21cgmenumobil">
+    <div class="szd5imenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="q21cgmenulist">
+    <div class="szd5imenulist">
       <ul>
-        <a href="/tr/" class="q21cgmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="q21cgmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="q21cgmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="q21cgmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="q21cgmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="q21cgmenuitem">İletişim</a>
+        <a href="/tr/" class="szd5imenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="szd5imenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="szd5imenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="szd5imenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="szd5imenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="szd5imenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".q21cgmenumobil")
+    .querySelector(".szd5imenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".q21cgmenulist");
+      const menu = document.querySelector(".szd5imenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,18 +72,18 @@
     });
 </script>
 </div>
-  <div id="content"><div class="cfmg5-title f36">
+  <div id="content"><div class="djhc0-title f36">
   <span>Gizlilik Politikası</span>
 </div>
-<div class="cfmg5">
-  <div class="cfmg5-menu-btn">
+<div class="djhc0">
+  <div class="djhc0-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="cfmg5-menu"><a   href="/tr/hakkimizda" >Hakkımızda</a><a   href="/tr/misyon" >Misyon</a><a   href="/tr/vizyon" >Vizyon</a><a   href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a class="active"  href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a   href="/tr/kisisel-veriler" >Kişisel Veriler</a><a   href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a   href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
-  <div class="cfmg5-desc">
+  <div class="djhc0-menu"><a   href="/tr/hakkimizda" >Hakkımızda</a><a   href="/tr/misyon" >Misyon</a><a   href="/tr/vizyon" >Vizyon</a><a   href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a class="active"  href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a   href="/tr/kisisel-veriler" >Kişisel Veriler</a><a   href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a   href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
+  <div class="djhc0-desc">
     
-    <div class="cfmg5-body"><p><h2 style="font-size: 24px;">Gizlilik Politikamız</h2></p>
+    <div class="djhc0-body"><p><h2 style="font-size: 24px;">Gizlilik Politikamız</h2></p>
 <p>    <p style="font-size: 16px;"></p>
 <p>        Web sitemizi ziyaret ettiğinizde, sitemizi kullanımınızı ve sitemizde sunulan hizmetleri geliştirmek amacıyla çerezler (cookies) aracılığıyla bazı bilgiler toplanmaktadır. Bu bilgiler, kimlik bilgileriniz hariç olmak üzere, sitemizde yer alan hizmetlerin daha iyi sunulması ve kullanıcı deneyiminin iyileştirilmesi amacıyla kullanılmaktadır. Çerezler, kullanıcı tercihlerinizi hatırlamak, sitemizin işleyişini optimize etmek ve size daha iyi bir deneyim sunmak için kullanılmaktadır.</p>
 <p>    </p></p>
@@ -98,9 +98,9 @@
 
 <script>
   document
-    .querySelector(".cfmg5-menu-btn")
+    .querySelector(".djhc0-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".cfmg5-menu").classList.toggle("active");
+      document.querySelector(".djhc0-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -166,7 +166,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=mdogy"></script>
-<script src="/src/cookie.js?v=mdogy"></script>
+<script type="text/javascript" src="/src/js.js?v=viqzu"></script>
+<script src="/src/cookie.js?v=viqzu"></script>
 
 </html>
