--- a/tr/hastanelerde-pacs-ve-arsivleme-hizmeti/index.html
+++ b/tr/hastanelerde-pacs-ve-arsivleme-hizmeti/index.html
@@ -9,14 +9,14 @@
   <meta http-equiv="Page-Enter" content="BlendTrans(Duration"="0)" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <title>Hastanelerde PACS ve Arşivleme Hizmeti</title>
-  <meta name="description" content="Hastanelerde PACS ve dijital arşivleme sistemi kurulumu. Görüntülerin güvenli saklanması ve kolay erişimi için modern teknoloji." />
-  <meta name="keywords" content="pacs sistemi, dijital arşivleme, görüntü saklama, hastane pacs, radyoloji arşivleme sistemi" />
+  <meta name="description" content="[object Object]" />
+  <meta name="keywords" content="[object Object]" />
   <meta property="og:title" content="Hastanelerde PACS ve Arşivleme Hizmeti" />
-  <meta property="og:description" content="Hastanelerde PACS ve dijital arşivleme sistemi kurulumu. Görüntülerin güvenli saklanması ve kolay erişimi için modern teknoloji." />
-  <meta property="og:image" content="https://atlantisradyoloji.com/page/pacs_arsiv/cq46g.jpg" />
+  <meta property="og:description" content="[object Object]" />
+  <meta property="og:image" content="https://atlantisradyoloji.com/page/pacs_arsiv/vtxn2.jpg" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=rqki5" />
-  <link rel="shortcut icon" href="/img/icon.png?v=rqki5" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=wfm6f" />
+  <link rel="shortcut icon" href="/img/icon.png?v=wfm6f" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=rqki5"></script>
-<link rel="stylesheet" href="style.css?v=rqki5">
+  <script type="text/javascript" src="/src/firebase.js?v=wfm6f"></script>
+<link rel="stylesheet" href="style.css?v=wfm6f">
 </head>
 
 <body>
-  <div id="header"><div class="osk31">
-  <div class="osk31title">
-    <div class="osk31titlebody">
-      <div class="osk31titlebodytitle">
+  <div id="header"><div class="fix2i">
+  <div class="fix2ititle">
+    <div class="fix2ititlebody">
+      <div class="fix2ititlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="osk31titlebodylang">
+      <div class="fix2ititlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="osk31Children">
-    <div class="osk31body">
-      <a href="/tr/"><img src="/img/logo.svg?v=rqki5" class="osk31bodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="fix2iChildren">
+    <div class="fix2ibody">
+      <a href="/tr/"><img src="/img/logo.svg?v=wfm6f" class="fix2ibodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="osk31menumobil">
+    <div class="fix2imenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="osk31menulist">
+    <div class="fix2imenulist">
       <ul>
-        <a href="/tr/" class="osk31menuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="osk31menuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="osk31menuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="osk31menuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="osk31menuitem">Referanslarımız</a><a href="/tr/iletisim/" class="osk31menuitem">İletişim</a>
+        <a href="/tr/" class="fix2imenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="fix2imenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="fix2imenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="fix2imenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="fix2imenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="fix2imenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".osk31menumobil")
+    .querySelector(".fix2imenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".osk31menulist");
+      const menu = document.querySelector(".fix2imenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,41 +72,29 @@
     });
 </script>
 </div>
-  <div id="content"><div class="stxe7-title f36">
+  <div id="content"><div class="ka97f-title f36">
   <span>Hastanelerde PACS ve Arşivleme Hizmeti</span>
 </div>
-<div class="stxe7">
-  <div class="stxe7-menu-btn">
+<div class="ka97f">
+  <div class="ka97f-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="stxe7-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a class="active"  href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
-  <div class="stxe7-desc">
+  <div class="ka97f-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a class="active"  href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
+  <div class="ka97f-desc">
     
-    <div class="stxe7-desc-body">
-            <img src="/page/pacs_arsiv/cq46g.jpg?v=rqki5" width="100%" alt="{{title}}" />
+    <div class="ka97f-desc-body">
+            <img src="/page/pacs_arsiv/vtxn2.jpg?v=wfm6f" width="100%" alt="{{title}}" />
     </div>
-    <div class="stxe7-body"><p><h2 style="font-size: 24px;">HASTANELERDE PACS VE ARŞİVLEME HİZMETİ</h2></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        PACS (Picture Archiving and Communication System) görüntü arşivleme ve iletişim sistemi, radyolojik görüntülerin dijital olarak elde edilmesi, arşivlenmesi ve iletilmesi işlemi olarak tanımlanabilir. Son yıllarda medikal teknolojilerin gelişimi, bilgisayar teknolojilerinin gelişimi ile paralellik göstermiştir. Tanıda kullanılan görüntüleme yöntemlerinin değişmesiyle birlikte, elde edilen görüntü ve raporların taşınması ve saklanmasında da bazı kolaylıklar oluşmaya başladı.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Sistem, dijital olarak elde edilen görüntülerin saklanmasını sağladığı gibi, bu görüntülerin bilgisayar ağları aracılığı ile sağlık merkezinin içinde yer alan herhangi bir bilgisayara veya başka merkezlere ulaştırılmasına da imkân tanıyor. Sistemin kuruluşu için görüntülemenin ortak dili olan DICOM formatında görüntü gönderen altyapının olması gereklidir. İstenildiği kadar saklanabilir görüntüler, daha sonra gerektiğinde binlerce hasta arasından aranan eski hastalık bulgularına ulaşılabilir.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Gerek görüntülerin saklanması gerekse daha önce yapılmış çekimlerin tekrar çekilmesi yerine yeniden kullanılabilmesi hastaların tedavi sürecinde büyük kolaylıklar sağlar. Ayrıca raporlar karşılaştırılarak hastalığın seyri takip edilebilir, önceki tetkiklerindeki ilgili imajlarla ve raporlarla karşılaştırılması amaçlı kullanılabilir. Dijital ortamda saklanan görüntüler sararmaz, kararmaz ve ilk günkü kalitesinde gerekirse tekrar basılabilir.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Hastaneler veya görüntüleme merkezleri merkezi PACS hizmeti kullanılarak kendi merkez veya hastanelerinde pahalı yatırımlar yapmadan hastaların görüntüleri istenildiği kadar arşivlenebilir. İnternet altyapısı kullanıldığından dolayı dünyanın her yerinden kesintisiz ve ek bir yatırım yapmadan sisteme ulaşmak mümkündür. Hastanelerimiz bizimle isterse haftalık, aylık ve yıllık anlaşabilirler. Uzaktan raporlama için gönderilen imajlar ve raporlar sistemde saklanır.</p>
-<p>    </p></p></div>
+    <div class="ka97f-body"></div>
   </div>
 </div>
 
 <script>
   document
-    .querySelector(".stxe7-menu-btn")
+    .querySelector(".ka97f-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".stxe7-menu").classList.toggle("active");
+      document.querySelector(".ka97f-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -172,7 +160,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=rqki5"></script>
-<script src="/src/cookie.js?v=rqki5"></script>
+<script type="text/javascript" src="/src/js.js?v=wfm6f"></script>
+<script src="/src/cookie.js?v=wfm6f"></script>
 
 </html>
