--- a/tr/kalite-politikamiz/index.html
+++ b/tr/kalite-politikamiz/index.html
@@ -15,8 +15,8 @@
   <meta property="og:description" content="Atlantis Radyoloji kalite politikası - Teleradyoloji hizmetlerinde en yüksek standartları sağlayarak 5 milyon raporlama ile kaliteli hizmet sunuyoruz." />
   <meta property="og:image" content="https://atlantisradyoloji.com/img/icon.png" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=yp9m9" />
-  <link rel="shortcut icon" href="/img/icon.png?v=yp9m9" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=uuznr" />
+  <link rel="shortcut icon" href="/img/icon.png?v=uuznr" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=yp9m9"></script>
-<link rel="stylesheet" href="style.css?v=yp9m9">
+  <script type="text/javascript" src="/src/firebase.js?v=uuznr"></script>
+<link rel="stylesheet" href="style.css?v=uuznr">
 </head>
 
 <body>
-  <div id="header"><div class="s62ez">
-  <div class="s62eztitle">
-    <div class="s62eztitlebody">
-      <div class="s62eztitlebodytitle">
+  <div id="header"><div class="ul4il">
+  <div class="ul4iltitle">
+    <div class="ul4iltitlebody">
+      <div class="ul4iltitlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="s62eztitlebodylang">
+      <div class="ul4iltitlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="s62ezChildren">
-    <div class="s62ezbody">
-      <a href="/tr/"><img src="/img/logo.svg?v=yp9m9" class="s62ezbodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="ul4ilChildren">
+    <div class="ul4ilbody">
+      <a href="/tr/"><img src="/img/logo.svg?v=uuznr" class="ul4ilbodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="s62ezmenumobil">
+    <div class="ul4ilmenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="s62ezmenulist">
+    <div class="ul4ilmenulist">
       <ul>
-        <a href="/tr/" class="s62ezmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="s62ezmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="s62ezmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="s62ezmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="s62ezmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="s62ezmenuitem">İletişim</a>
+        <a href="/tr/" class="ul4ilmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="ul4ilmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="ul4ilmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="ul4ilmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="ul4ilmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="ul4ilmenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".s62ezmenumobil")
+    .querySelector(".ul4ilmenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".s62ezmenulist");
+      const menu = document.querySelector(".ul4ilmenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,18 +72,18 @@
     });
 </script>
 </div>
-  <div id="content"><div class="taagt-title f36">
+  <div id="content"><div class="c69d6-title f36">
   <span>Kalite Politikamız</span>
 </div>
-<div class="taagt">
-  <div class="taagt-menu-btn">
+<div class="c69d6">
+  <div class="c69d6-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="taagt-menu"><a   href="/tr/hakkimizda" >Hakkımızda</a><a   href="/tr/misyon" >Misyon</a><a   href="/tr/vizyon" >Vizyon</a><a class="active"  href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a   href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a   href="/tr/kisisel-veriler" >Kişisel Veriler</a><a   href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a   href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
-  <div class="taagt-desc">
+  <div class="c69d6-menu"><a   href="/tr/hakkimizda" >Hakkımızda</a><a   href="/tr/misyon" >Misyon</a><a   href="/tr/vizyon" >Vizyon</a><a class="active"  href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a   href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a   href="/tr/kisisel-veriler" >Kişisel Veriler</a><a   href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a   href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
+  <div class="c69d6-desc">
     
-    <div class="taagt-body"><p><h2 style="font-size: 24px;">ATLANTİS RADYOLOJİ KALİTE POLİTİKAMIZ</h2></p>
+    <div class="c69d6-body"><p><h2 style="font-size: 24px;">ATLANTİS RADYOLOJİ KALİTE POLİTİKAMIZ</h2></p>
 <p>    <p style="font-size: 16px;"></p>
 <p>        Kalite politikamız, teleradyoloji hizmetlerinde en yüksek standartları sağlamak ve müşteri memnuniyetini ön planda tutmak üzerine kurulmuştur. 23 yıllık deneyimimizle bugüne kadar 5.000.000 adet raporlama gerçekleştirmiş olup, her bir raporlama işleminde kalite kontrol süreçlerimizi titizlikle uygulamaktayız. 40 doktor, 40 tıbbi sekreter ve 5 teknik personelden oluşan güçlü kadromuz, sürekli eğitim ve gelişim programları ile desteklenmektedir.</p>
 <p>    </p></p>
@@ -98,9 +98,9 @@
 
 <script>
   document
-    .querySelector(".taagt-menu-btn")
+    .querySelector(".c69d6-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".taagt-menu").classList.toggle("active");
+      document.querySelector(".c69d6-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -166,7 +166,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=yp9m9"></script>
-<script src="/src/cookie.js?v=yp9m9"></script>
+<script type="text/javascript" src="/src/js.js?v=uuznr"></script>
+<script src="/src/cookie.js?v=uuznr"></script>
 
 </html>
