--- a/tr/kullanici-haklari/index.html
+++ b/tr/kullanici-haklari/index.html
@@ -15,8 +15,8 @@
   <meta property="og:description" content="Atlantis Radyoloji kullanıcı hakları - KVKK kapsamında kişisel veri sahiplerinin hakları ve kullanımı." />
   <meta property="og:image" content="https://atlantisradyoloji.com/img/icon.png" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=zajr6" />
-  <link rel="shortcut icon" href="/img/icon.png?v=zajr6" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=yc0iv" />
+  <link rel="shortcut icon" href="/img/icon.png?v=yc0iv" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=zajr6"></script>
-<link rel="stylesheet" href="style.css?v=zajr6">
+  <script type="text/javascript" src="/src/firebase.js?v=yc0iv"></script>
+<link rel="stylesheet" href="style.css?v=yc0iv">
 </head>
 
 <body>
-  <div id="header"><div class="bm5kx">
-  <div class="bm5kxtitle">
-    <div class="bm5kxtitlebody">
-      <div class="bm5kxtitlebodytitle">
+  <div id="header"><div class="akh2y">
+  <div class="akh2ytitle">
+    <div class="akh2ytitlebody">
+      <div class="akh2ytitlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="bm5kxtitlebodylang">
+      <div class="akh2ytitlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="bm5kxChildren">
-    <div class="bm5kxbody">
-      <a href="/tr/"><img src="/img/logo.svg?v=zajr6" class="bm5kxbodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="akh2yChildren">
+    <div class="akh2ybody">
+      <a href="/tr/"><img src="/img/logo.svg?v=yc0iv" class="akh2ybodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="bm5kxmenumobil">
+    <div class="akh2ymenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="bm5kxmenulist">
+    <div class="akh2ymenulist">
       <ul>
-        <a href="/tr/" class="bm5kxmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="bm5kxmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="bm5kxmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="bm5kxmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="bm5kxmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="bm5kxmenuitem">İletişim</a>
+        <a href="/tr/" class="akh2ymenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="akh2ymenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="akh2ymenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="akh2ymenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="akh2ymenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="akh2ymenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".bm5kxmenumobil")
+    .querySelector(".akh2ymenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".bm5kxmenulist");
+      const menu = document.querySelector(".akh2ymenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,18 +72,18 @@
     });
 </script>
 </div>
-  <div id="content"><div class="eb39e-title f36">
+  <div id="content"><div class="l53tc-title f36">
   <span>Kullanıcı Hakları</span>
 </div>
-<div class="eb39e">
-  <div class="eb39e-menu-btn">
+<div class="l53tc">
+  <div class="l53tc-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="eb39e-menu"><a   href="/tr/hakkimizda" >Hakkımızda</a><a   href="/tr/misyon" >Misyon</a><a   href="/tr/vizyon" >Vizyon</a><a   href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a   href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a   href="/tr/kisisel-veriler" >Kişisel Veriler</a><a class="active"  href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a   href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
-  <div class="eb39e-desc">
+  <div class="l53tc-menu"><a   href="/tr/hakkimizda" >Hakkımızda</a><a   href="/tr/misyon" >Misyon</a><a   href="/tr/vizyon" >Vizyon</a><a   href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a   href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a   href="/tr/kisisel-veriler" >Kişisel Veriler</a><a class="active"  href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a   href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
+  <div class="l53tc-desc">
     
-    <div class="eb39e-body"><p><h2 style="font-size: 24px;">Kullanıcı Hakları</h2></p>
+    <div class="l53tc-body"><p><h2 style="font-size: 24px;">Kullanıcı Hakları</h2></p>
 <p>    <p style="font-size: 16px;"></p>
 <p>        Herkes, kişisel verilerinin korunmasını isteme hakkına sahiptir. Kişisel verilerinizin korunması bizim için çok önemlidir ve bu doğrultuda 6698 sayılı Kişisel Verilerin Korunması Kanunu (KVKK) ve ilgili mevzuat çerçevesinde hareket etmekteyiz. Kullanıcılar, verilerinin hangi amaçlarla toplandığı, nasıl saklandığı ve kimlerle paylaşıldığı konusunda bilgilendirilme hakkına sahiptir.</p>
 <p>    </p></p>
@@ -96,9 +96,9 @@
 
 <script>
   document
-    .querySelector(".eb39e-menu-btn")
+    .querySelector(".l53tc-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".eb39e-menu").classList.toggle("active");
+      document.querySelector(".l53tc-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -164,7 +164,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=zajr6"></script>
-<script src="/src/cookie.js?v=zajr6"></script>
+<script type="text/javascript" src="/src/js.js?v=yc0iv"></script>
+<script src="/src/cookie.js?v=yc0iv"></script>
 
 </html>
