--- a/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi/index.html
+++ b/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi/index.html
@@ -9,14 +9,14 @@
   <meta http-equiv="Page-Enter" content="BlendTrans(Duration"="0)" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <title>Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</title>
-  <meta name="description" content="Manyetik Rezonans Görüntüleme cihaz odalarının projelendirilmesi ve anahtar teslim yapımı. Güvenli ve etkin MR odaları." />
-  <meta name="keywords" content="mr odası projelendirme, manyetik rezonans odası, mr odası yapımı, radyoloji odası projelendirme" />
+  <meta name="description" content="[object Object]" />
+  <meta name="keywords" content="[object Object]" />
   <meta property="og:title" content="Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı" />
-  <meta property="og:description" content="Manyetik Rezonans Görüntüleme cihaz odalarının projelendirilmesi ve anahtar teslim yapımı. Güvenli ve etkin MR odaları." />
-  <meta property="og:image" content="https://atlantisradyoloji.com/page/mr_odasi/e8t0i.jpg" />
+  <meta property="og:description" content="[object Object]" />
+  <meta property="og:image" content="https://atlantisradyoloji.com/page/mr_odasi/ysi6m.jpg" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=cy203" />
-  <link rel="shortcut icon" href="/img/icon.png?v=cy203" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=q60sp" />
+  <link rel="shortcut icon" href="/img/icon.png?v=q60sp" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=cy203"></script>
-<link rel="stylesheet" href="style.css?v=cy203">
+  <script type="text/javascript" src="/src/firebase.js?v=q60sp"></script>
+<link rel="stylesheet" href="style.css?v=q60sp">
 </head>
 
 <body>
-  <div id="header"><div class="vy1dn">
-  <div class="vy1dntitle">
-    <div class="vy1dntitlebody">
-      <div class="vy1dntitlebodytitle">
+  <div id="header"><div class="k74x2">
+  <div class="k74x2title">
+    <div class="k74x2titlebody">
+      <div class="k74x2titlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="vy1dntitlebodylang">
+      <div class="k74x2titlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="vy1dnChildren">
-    <div class="vy1dnbody">
-      <a href="/tr/"><img src="/img/logo.svg?v=cy203" class="vy1dnbodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="k74x2Children">
+    <div class="k74x2body">
+      <a href="/tr/"><img src="/img/logo.svg?v=q60sp" class="k74x2bodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="vy1dnmenumobil">
+    <div class="k74x2menumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="vy1dnmenulist">
+    <div class="k74x2menulist">
       <ul>
-        <a href="/tr/" class="vy1dnmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="vy1dnmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="vy1dnmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="vy1dnmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="vy1dnmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="vy1dnmenuitem">İletişim</a>
+        <a href="/tr/" class="k74x2menuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="k74x2menuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="k74x2menuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="k74x2menuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="k74x2menuitem">Referanslarımız</a><a href="/tr/iletisim/" class="k74x2menuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".vy1dnmenumobil")
+    .querySelector(".k74x2menumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".vy1dnmenulist");
+      const menu = document.querySelector(".k74x2menulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,41 +72,29 @@
     });
 </script>
 </div>
-  <div id="content"><div class="j8e48-title f36">
+  <div id="content"><div class="andf4-title f36">
   <span>Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</span>
 </div>
-<div class="j8e48">
-  <div class="j8e48-menu-btn">
+<div class="andf4">
+  <div class="andf4-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="j8e48-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a class="active"  href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
-  <div class="j8e48-desc">
+  <div class="andf4-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a class="active"  href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
+  <div class="andf4-desc">
     
-    <div class="j8e48-desc-body">
-            <img src="/page/mr_odasi/e8t0i.jpg?v=cy203" width="100%" alt="{{title}}" />
+    <div class="andf4-desc-body">
+            <img src="/page/mr_odasi/ysi6m.jpg?v=q60sp" width="100%" alt="{{title}}" />
     </div>
-    <div class="j8e48-body"><p><h2 style="font-size: 24px;">MANYETİK REZONANS GÖRÜNTÜLEME CİHAZ ODALARININ PROJELENDİRİLMESİ VE YAPIMI</h2></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Manyetik Rezonans Görüntüleme (MR) cihaz odalarının projelendirilmesi ve anahtar teslim yapımı hizmetleri konusunda uzman ekibimizle hizmet veriyoruz. Firmamız 23 yıllık deneyim ve birikimi ile bu sektörde bilgi ve birikimi en profesyonel şekilde çalışan 40 Doktor, 40 Tıbbi Sekreter ve 5 Teknik personelden oluşan güçlü kadrosu ile hizmet vermektedir. MR odalarının projelendirilmesi, manyetik alan güvenliği açısından kritik önem taşıyan bir süreçtir.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        MR odalarının projelendirilmesinde, odanın boyutları, manyetik alan kalkanı, havalandırma sistemi, elektrik tesisatı, soğutma sistemi, ses yalıtımı gibi teknik detaylar özenle hesaplanır. Manyetik alan kalkanı, MR cihazının güçlü manyetik alanının dış ortama yayılmasını önlemek için gerekli olan en önemli güvenlik önlemidir. MR cihazının tesla değerine göre kalkan kalınlığı belirlenir ve bu kalınlık standartlara uygun şekilde uygulanır.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Anahtar teslim MR odası yapımı hizmetimizde, projelendirmeden başlayarak, inşaat, manyetik alan kalkanı, elektrik tesisatı, havalandırma sistemi, soğutma sistemi, ses yalıtımı, MR cihazının montajı ve devreye alınmasına kadar tüm süreçleri yönetiyoruz. Uzman ekibimiz, ulusal ve uluslararası standartlara uygun şekilde çalışarak, güvenli ve verimli MR odaları kurulumu gerçekleştiriyoruz. Tüm projelerimizde kalite kontrol süreçlerini titizlikle uygulayarak, müşteri memnuniyetini ön planda tutuyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        MR odalarının projelendirilmesi ve yapımı sürecinde, müşterilerimizin ihtiyaçlarına göre özel çözümler üretiyoruz. Mevcut yapıların güçlendirilmesi, yeni MR odası inşaatı, eski MR odalarının yenilenmesi gibi farklı projelerde deneyimli ekibimizle hizmet veriyoruz. Projelerimizde kullandığımız malzemeler, ulusal ve uluslararası standartlara uygun, kaliteli ve dayanıklı malzemelerdir. MR odası projelerimizde, manyetik alan güvenliği, çevre güvenliği ve personel güvenliği önceliklerimizdir.</p>
-<p>    </p></p></div>
+    <div class="andf4-body"></div>
   </div>
 </div>
 
 <script>
   document
-    .querySelector(".j8e48-menu-btn")
+    .querySelector(".andf4-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".j8e48-menu").classList.toggle("active");
+      document.querySelector(".andf4-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -172,7 +160,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=cy203"></script>
-<script src="/src/cookie.js?v=cy203"></script>
+<script type="text/javascript" src="/src/js.js?v=q60sp"></script>
+<script src="/src/cookie.js?v=q60sp"></script>
 
 </html>
