--- a/tr/radyoloji-bolumu-isletme-hizmeti/index.html
+++ b/tr/radyoloji-bolumu-isletme-hizmeti/index.html
@@ -9,14 +9,14 @@
   <meta http-equiv="Page-Enter" content="BlendTrans(Duration"="0)" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <title>Radyoloji Bölümü İşletme Hizmeti</title>
-  <meta name="description" content="Hastanelerde radyoloji bölümü işletme hizmetleri. Personel yönetimi, cihaz operasyonu ve kalite kontrolü." />
-  <meta name="keywords" content="radyoloji işletme hizmeti, hastane radyoloji işletmesi, radyoloji personel yönetimi, radyoloji cihaz operasyonu" />
+  <meta name="description" content="[object Object]" />
+  <meta name="keywords" content="[object Object]" />
   <meta property="og:title" content="Radyoloji Bölümü İşletme Hizmeti" />
-  <meta property="og:description" content="Hastanelerde radyoloji bölümü işletme hizmetleri. Personel yönetimi, cihaz operasyonu ve kalite kontrolü." />
-  <meta property="og:image" content="https://atlantisradyoloji.com/page/radyoloji_isletme/jjl39.jpg" />
+  <meta property="og:description" content="[object Object]" />
+  <meta property="og:image" content="https://atlantisradyoloji.com/page/radyoloji_isletme/hr4ej.jpg" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=mwec5" />
-  <link rel="shortcut icon" href="/img/icon.png?v=mwec5" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=vmzz1" />
+  <link rel="shortcut icon" href="/img/icon.png?v=vmzz1" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=mwec5"></script>
-<link rel="stylesheet" href="style.css?v=mwec5">
+  <script type="text/javascript" src="/src/firebase.js?v=vmzz1"></script>
+<link rel="stylesheet" href="style.css?v=vmzz1">
 </head>
 
 <body>
-  <div id="header"><div class="f0opq">
-  <div class="f0opqtitle">
-    <div class="f0opqtitlebody">
-      <div class="f0opqtitlebodytitle">
+  <div id="header"><div class="fw0sj">
+  <div class="fw0sjtitle">
+    <div class="fw0sjtitlebody">
+      <div class="fw0sjtitlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="f0opqtitlebodylang">
+      <div class="fw0sjtitlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="f0opqChildren">
-    <div class="f0opqbody">
-      <a href="/tr/"><img src="/img/logo.svg?v=mwec5" class="f0opqbodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="fw0sjChildren">
+    <div class="fw0sjbody">
+      <a href="/tr/"><img src="/img/logo.svg?v=vmzz1" class="fw0sjbodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="f0opqmenumobil">
+    <div class="fw0sjmenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="f0opqmenulist">
+    <div class="fw0sjmenulist">
       <ul>
-        <a href="/tr/" class="f0opqmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="f0opqmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="f0opqmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="f0opqmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="f0opqmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="f0opqmenuitem">İletişim</a>
+        <a href="/tr/" class="fw0sjmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="fw0sjmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="fw0sjmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="fw0sjmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="fw0sjmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="fw0sjmenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".f0opqmenumobil")
+    .querySelector(".fw0sjmenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".f0opqmenulist");
+      const menu = document.querySelector(".fw0sjmenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,41 +72,29 @@
     });
 </script>
 </div>
-  <div id="content"><div class="wo5h7-title f36">
+  <div id="content"><div class="pfu3q-title f36">
   <span>Radyoloji Bölümü İşletme Hizmeti</span>
 </div>
-<div class="wo5h7">
-  <div class="wo5h7-menu-btn">
+<div class="pfu3q">
+  <div class="pfu3q-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="wo5h7-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a class="active"  href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
-  <div class="wo5h7-desc">
+  <div class="pfu3q-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a class="active"  href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
+  <div class="pfu3q-desc">
     
-    <div class="wo5h7-desc-body">
-            <img src="/page/radyoloji_isletme/jjl39.jpg?v=mwec5" width="100%" alt="{{title}}" />
+    <div class="pfu3q-desc-body">
+            <img src="/page/radyoloji_isletme/hr4ej.jpg?v=vmzz1" width="100%" alt="{{title}}" />
     </div>
-    <div class="wo5h7-body"><p><h2 style="font-size: 24px;">RADYOLOJİ BÖLÜMÜ İŞLETME HİZMETİ</h2></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Hastanelerde radyoloji bölümü işletme hizmetleri konusunda uzman ekibimizle hizmet veriyoruz. Firmamız 23 yıllık deneyim ve birikimi ile bu sektörde bilgi ve birikimi en profesyonel şekilde çalışan 40 Doktor, 40 Tıbbi Sekreter ve 5 Teknik personelden oluşan güçlü kadrosu ile hizmet vermektedir. Personel yönetimi, cihaz operasyonu ve kalite kontrolü konularında kapsamlı işletme hizmetleri sunuyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Radyoloji bölümü işletme hizmetlerimizde, hastanelerin radyoloji bölümlerinin günlük işletilmesi, personel yönetimi, cihaz operasyonu, hasta takibi, raporlama süreçleri, kalite kontrolü gibi konularda uzman ekibimizle hizmet veriyoruz. MRI, BT, röntgen, mamografi, ultrasonografi gibi radyolojik cihazların işletilmesi konusunda deneyimli personelimizle destek sağlıyoruz. Hastanelerin radyoloji bölümlerinin verimli ve güvenli şekilde işletilmesini sağlıyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Personel yönetimi hizmetlerimizde, radyoloji teknisyenlerinin eğitimi, cihaz kullanımı eğitimi, güvenlik eğitimi, hasta iletişimi eğitimi gibi konularda kapsamlı eğitim programları düzenliyoruz. Cihaz operasyonu hizmetlerimizde, radyolojik cihazların günlük kullanımı, bakımı, kalibrasyonu, arıza durumlarında müdahale gibi konularda uzman desteği sağlıyoruz. Kalite kontrolü hizmetlerimizde, radyolojik görüntülerin kalitesi, raporların doğruluğu, hasta güvenliği gibi konularda sürekli denetim yapıyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Radyoloji bölümü işletme hizmetlerimizde, hastanelerin ihtiyaçlarına göre özel çözümler üretiyoruz. Tam zamanlı işletme hizmeti, yarı zamanlı işletme hizmeti, danışmanlık hizmeti gibi farklı hizmet modelleri sunuyoruz. Hastanelerin radyoloji bölümlerinin modernizasyonu, yeni cihaz alımları, personel eğitimi gibi konularda da destek sağlıyoruz. 23 yıllık deneyimimizle radyoloji bölümü işletme hizmetlerinde başarılı sonuçlar elde etmekteyiz.</p>
-<p>    </p></p></div>
+    <div class="pfu3q-body"></div>
   </div>
 </div>
 
 <script>
   document
-    .querySelector(".wo5h7-menu-btn")
+    .querySelector(".pfu3q-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".wo5h7-menu").classList.toggle("active");
+      document.querySelector(".pfu3q-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -172,7 +160,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=mwec5"></script>
-<script src="/src/cookie.js?v=mwec5"></script>
+<script type="text/javascript" src="/src/js.js?v=vmzz1"></script>
+<script src="/src/cookie.js?v=vmzz1"></script>
 
 </html>
