--- a/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el/index.html
+++ b/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el/index.html
@@ -9,14 +9,14 @@
   <meta http-equiv="Page-Enter" content="BlendTrans(Duration"="0)" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <title>Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</title>
-  <meta name="description" content="Sıfır ve ikinci el radyoloji cihaz satışı. MRI, BT, röntgen, mamografi ve diğer görüntüleme cihazları." />
-  <meta name="keywords" content="radyoloji cihaz satışı, mri satış, bt satış, röntgen cihazı, mamografi cihazı, ikinci el radyoloji cihazları" />
+  <meta name="description" content="[object Object]" />
+  <meta name="keywords" content="[object Object]" />
   <meta property="og:title" content="Radyoloji Cihaz Satışı (Sıfır ve İkinci El)" />
-  <meta property="og:description" content="Sıfır ve ikinci el radyoloji cihaz satışı. MRI, BT, röntgen, mamografi ve diğer görüntüleme cihazları." />
-  <meta property="og:image" content="https://atlantisradyoloji.com/page/cihaz_satis/pds6a.jpg" />
+  <meta property="og:description" content="[object Object]" />
+  <meta property="og:image" content="https://atlantisradyoloji.com/page/cihaz_satis/og9nm.jpg" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=z5vbe" />
-  <link rel="shortcut icon" href="/img/icon.png?v=z5vbe" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=gjoo7" />
+  <link rel="shortcut icon" href="/img/icon.png?v=gjoo7" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=z5vbe"></script>
-<link rel="stylesheet" href="style.css?v=z5vbe">
+  <script type="text/javascript" src="/src/firebase.js?v=gjoo7"></script>
+<link rel="stylesheet" href="style.css?v=gjoo7">
 </head>
 
 <body>
-  <div id="header"><div class="x6bog">
-  <div class="x6bogtitle">
-    <div class="x6bogtitlebody">
-      <div class="x6bogtitlebodytitle">
+  <div id="header"><div class="dho7t">
+  <div class="dho7ttitle">
+    <div class="dho7ttitlebody">
+      <div class="dho7ttitlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="x6bogtitlebodylang">
+      <div class="dho7ttitlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="x6bogChildren">
-    <div class="x6bogbody">
-      <a href="/tr/"><img src="/img/logo.svg?v=z5vbe" class="x6bogbodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="dho7tChildren">
+    <div class="dho7tbody">
+      <a href="/tr/"><img src="/img/logo.svg?v=gjoo7" class="dho7tbodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="x6bogmenumobil">
+    <div class="dho7tmenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="x6bogmenulist">
+    <div class="dho7tmenulist">
       <ul>
-        <a href="/tr/" class="x6bogmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="x6bogmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="x6bogmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="x6bogmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="x6bogmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="x6bogmenuitem">İletişim</a>
+        <a href="/tr/" class="dho7tmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="dho7tmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="dho7tmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="dho7tmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="dho7tmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="dho7tmenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".x6bogmenumobil")
+    .querySelector(".dho7tmenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".x6bogmenulist");
+      const menu = document.querySelector(".dho7tmenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,41 +72,29 @@
     });
 </script>
 </div>
-  <div id="content"><div class="h9j6n-title f36">
+  <div id="content"><div class="r35wk-title f36">
   <span>Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</span>
 </div>
-<div class="h9j6n">
-  <div class="h9j6n-menu-btn">
+<div class="r35wk">
+  <div class="r35wk-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="h9j6n-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a class="active"  href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
-  <div class="h9j6n-desc">
+  <div class="r35wk-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a class="active"  href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
+  <div class="r35wk-desc">
     
-    <div class="h9j6n-desc-body">
-            <img src="/page/cihaz_satis/pds6a.jpg?v=z5vbe" width="100%" alt="{{title}}" />
+    <div class="r35wk-desc-body">
+            <img src="/page/cihaz_satis/og9nm.jpg?v=gjoo7" width="100%" alt="{{title}}" />
     </div>
-    <div class="h9j6n-body"><p><h2 style="font-size: 24px;">RADYOLOJİ CİHAZ SATIŞI (SIFIR VE İKİNCİ EL)</h2></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Sıfır ve ikinci el radyoloji cihaz satışı konusunda uzman ekibimizle hizmet veriyoruz. Firmamız 23 yıllık deneyim ve birikimi ile bu sektörde bilgi ve birikimi en profesyonel şekilde çalışan 40 Doktor, 40 Tıbbi Sekreter ve 5 Teknik personelden oluşan güçlü kadrosu ile hizmet vermektedir. MRI, BT, röntgen, mamografi ve diğer görüntüleme cihazlarının satışını gerçekleştiriyoruz. Kaliteli ve güvenilir cihazları uygun fiyatlarla müşterilerimize sunuyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Radyoloji cihaz satışı hizmetlerimizde, hastanelerin ve görüntüleme merkezlerinin ihtiyaçlarına uygun MRI (Manyetik Rezonans Görüntüleme), BT (Bilgisayarlı Tomografi), röntgen, mamografi, ultrasonografi, sintigrafi gibi radyolojik cihazların sıfır ve ikinci el satışını gerçekleştiriyoruz. Cihaz seçimi konusunda da kapsamlı danışmanlık hizmeti veriyoruz. Müşterilerimizin bütçelerine uygun, kaliteli ve güvenilir cihazları bulmalarına yardımcı oluyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Sıfır radyoloji cihaz satışında, dünya çapında tanınan markaların en yeni teknoloji ürünlerini müşterilerimize sunuyoruz. İkinci el radyoloji cihaz satışında ise, cihazların teknik durumu, bakım geçmişi, kalibrasyon durumu gibi konularda detaylı analizler yaparak, kaliteli ve güvenilir cihazları müşterilerimize sunuyoruz. Cihaz satışı sonrasında kurulum, kalibrasyon, personel eğitimi gibi hizmetleri de sağlıyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Radyoloji cihaz satışı hizmetlerimizde, müşterilerimizin ihtiyaçlarına göre özel çözümler üretiyoruz. Finansman seçenekleri, takas işlemleri, eski cihazların değerlendirilmesi gibi konularda da danışmanlık hizmeti veriyoruz. Cihaz satışı sonrasında bakım, onarım, yedek parça temini gibi konularda da uzun dönemli destek sağlıyoruz. 23 yıllık deneyimimizle radyoloji cihaz satışında güvenilir bir partner olarak hizmet veriyoruz.</p>
-<p>    </p></p></div>
+    <div class="r35wk-body"></div>
   </div>
 </div>
 
 <script>
   document
-    .querySelector(".h9j6n-menu-btn")
+    .querySelector(".r35wk-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".h9j6n-menu").classList.toggle("active");
+      document.querySelector(".r35wk-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -172,7 +160,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=z5vbe"></script>
-<script src="/src/cookie.js?v=z5vbe"></script>
+<script type="text/javascript" src="/src/js.js?v=gjoo7"></script>
+<script src="/src/cookie.js?v=gjoo7"></script>
 
 </html>
