--- a/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti/index.html
+++ b/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti/index.html
@@ -9,14 +9,14 @@
   <meta http-equiv="Page-Enter" content="BlendTrans(Duration"="0)" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <title>Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</title>
-  <meta name="description" content="Radyolojik cihazların TAEK lisanslamada danışmanlık hizmeti. Yasal uyumluluk ve lisanslama süreçlerinde rehberlik." />
-  <meta name="keywords" content="taek lisanslama, radyoloji cihaz lisansı, taek danışmanlık, radyoloji yasal uyumluluk" />
+  <meta name="description" content="[object Object]" />
+  <meta name="keywords" content="[object Object]" />
   <meta property="og:title" content="Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti" />
-  <meta property="og:description" content="Radyolojik cihazların TAEK lisanslamada danışmanlık hizmeti. Yasal uyumluluk ve lisanslama süreçlerinde rehberlik." />
-  <meta property="og:image" content="https://atlantisradyoloji.com/page/taek_lisans/owdy4.jpg" />
+  <meta property="og:description" content="[object Object]" />
+  <meta property="og:image" content="https://atlantisradyoloji.com/page/taek_lisans/dkaj2.jpg" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=xfmt1" />
-  <link rel="shortcut icon" href="/img/icon.png?v=xfmt1" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=wb6m4" />
+  <link rel="shortcut icon" href="/img/icon.png?v=wb6m4" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=xfmt1"></script>
-<link rel="stylesheet" href="style.css?v=xfmt1">
+  <script type="text/javascript" src="/src/firebase.js?v=wb6m4"></script>
+<link rel="stylesheet" href="style.css?v=wb6m4">
 </head>
 
 <body>
-  <div id="header"><div class="j7kql">
-  <div class="j7kqltitle">
-    <div class="j7kqltitlebody">
-      <div class="j7kqltitlebodytitle">
+  <div id="header"><div class="i2tqz">
+  <div class="i2tqztitle">
+    <div class="i2tqztitlebody">
+      <div class="i2tqztitlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="j7kqltitlebodylang">
+      <div class="i2tqztitlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="j7kqlChildren">
-    <div class="j7kqlbody">
-      <a href="/tr/"><img src="/img/logo.svg?v=xfmt1" class="j7kqlbodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="i2tqzChildren">
+    <div class="i2tqzbody">
+      <a href="/tr/"><img src="/img/logo.svg?v=wb6m4" class="i2tqzbodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="j7kqlmenumobil">
+    <div class="i2tqzmenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="j7kqlmenulist">
+    <div class="i2tqzmenulist">
       <ul>
-        <a href="/tr/" class="j7kqlmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="j7kqlmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="j7kqlmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="j7kqlmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="j7kqlmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="j7kqlmenuitem">İletişim</a>
+        <a href="/tr/" class="i2tqzmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="i2tqzmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="i2tqzmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="i2tqzmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="i2tqzmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="i2tqzmenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".j7kqlmenumobil")
+    .querySelector(".i2tqzmenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".j7kqlmenulist");
+      const menu = document.querySelector(".i2tqzmenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,41 +72,29 @@
     });
 </script>
 </div>
-  <div id="content"><div class="ffh3w-title f36">
+  <div id="content"><div class="cnyip-title f36">
   <span>Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</span>
 </div>
-<div class="ffh3w">
-  <div class="ffh3w-menu-btn">
+<div class="cnyip">
+  <div class="cnyip-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="ffh3w-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a class="active"  href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
-  <div class="ffh3w-desc">
+  <div class="cnyip-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a class="active"  href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
+  <div class="cnyip-desc">
     
-    <div class="ffh3w-desc-body">
-            <img src="/page/taek_lisans/owdy4.jpg?v=xfmt1" width="100%" alt="{{title}}" />
+    <div class="cnyip-desc-body">
+            <img src="/page/taek_lisans/dkaj2.jpg?v=wb6m4" width="100%" alt="{{title}}" />
     </div>
-    <div class="ffh3w-body"><p><h2 style="font-size: 24px;">RADYOLOJİK CİHAZLARIN TAEK LİSANSLAMADA DANIŞMANLIK HİZMETİ</h2></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Radyolojik cihazların TAEK (Türkiye Atom Enerji Kurumu) lisanslamada danışmanlık hizmeti konusunda uzman ekibimizle hizmet veriyoruz. Firmamız 23 yıllık deneyim ve birikimi ile bu sektörde bilgi ve birikimi en profesyonel şekilde çalışan 40 Doktor, 40 Tıbbi Sekreter ve 5 Teknik personelden oluşan güçlü kadrosu ile hizmet vermektedir. TAEK lisanslama süreçlerinde yasal uyumluluk ve lisanslama süreçlerinde rehberlik sağlıyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        TAEK lisanslama danışmanlığımızda, radyolojik cihazların lisanslanması için gerekli olan tüm belgelerin hazırlanması, başvuru süreçlerinin yönetilmesi, TAEK ile iletişim kurulması, lisans yenileme işlemleri gibi konularda kapsamlı danışmanlık hizmeti veriyoruz. MRI, BT, röntgen, mamografi, sintigrafi gibi radyolojik cihazların lisanslanması konusunda uzman desteği sağlıyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        TAEK lisanslama süreçlerinde, cihazların teknik özelliklerinin belirlenmesi, güvenlik standartlarının karşılanması, çevre güvenliği önlemlerinin alınması, personel güvenliği eğitimlerinin verilmesi gibi konularda detaylı rehberlik sağlıyoruz. Lisanslama süreçlerinde karşılaşılan teknik ve yasal sorunların çözümünde uzman ekibimizle destek veriyoruz. TAEK mevzuatına uygun şekilde lisanslama işlemlerinin tamamlanmasını sağlıyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        TAEK lisanslama danışmanlığımızda, hastanelerin ve görüntüleme merkezlerinin radyolojik cihaz lisanslama ihtiyaçlarına göre özel çözümler üretiyoruz. Yeni cihaz alımlarında lisanslama süreçlerinin planlanması, mevcut cihazların lisans yenileme işlemleri, lisanslama süreçlerinde karşılaşılan sorunların çözümü gibi konularda kapsamlı danışmanlık hizmeti veriyoruz. 23 yıllık deneyimimizle TAEK lisanslama süreçlerinde başarılı sonuçlar elde etmekteyiz.</p>
-<p>    </p></p></div>
+    <div class="cnyip-body"></div>
   </div>
 </div>
 
 <script>
   document
-    .querySelector(".ffh3w-menu-btn")
+    .querySelector(".cnyip-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".ffh3w-menu").classList.toggle("active");
+      document.querySelector(".cnyip-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -172,7 +160,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=xfmt1"></script>
-<script src="/src/cookie.js?v=xfmt1"></script>
+<script type="text/javascript" src="/src/js.js?v=wb6m4"></script>
+<script src="/src/cookie.js?v=wb6m4"></script>
 
 </html>
