--- a/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi/index.html
+++ b/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi/index.html
@@ -9,14 +9,14 @@
   <meta http-equiv="Page-Enter" content="BlendTrans(Duration"="0)" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <title>Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</title>
-  <meta name="description" content="Röntgen ve mamografi odalarının projelendirilmesi, kurşun kaplanması ve anahtar teslim yapımı hizmetleri." />
-  <meta name="keywords" content="röntgen odası projelendirme, mamografi odası, kurşun kaplama, radyoloji odası yapımı, röntgen kurulumu" />
+  <meta name="description" content="[object Object]" />
+  <meta name="keywords" content="[object Object]" />
   <meta property="og:title" content="Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı" />
-  <meta property="og:description" content="Röntgen ve mamografi odalarının projelendirilmesi, kurşun kaplanması ve anahtar teslim yapımı hizmetleri." />
-  <meta property="og:image" content="https://atlantisradyoloji.com/page/rontgen_mamografi/vm2bm.jpg" />
+  <meta property="og:description" content="[object Object]" />
+  <meta property="og:image" content="https://atlantisradyoloji.com/page/rontgen_mamografi/ssc4q.jpg" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=fawhb" />
-  <link rel="shortcut icon" href="/img/icon.png?v=fawhb" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=bxw0a" />
+  <link rel="shortcut icon" href="/img/icon.png?v=bxw0a" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=fawhb"></script>
-<link rel="stylesheet" href="style.css?v=fawhb">
+  <script type="text/javascript" src="/src/firebase.js?v=bxw0a"></script>
+<link rel="stylesheet" href="style.css?v=bxw0a">
 </head>
 
 <body>
-  <div id="header"><div class="rojzf">
-  <div class="rojzftitle">
-    <div class="rojzftitlebody">
-      <div class="rojzftitlebodytitle">
+  <div id="header"><div class="sfr3i">
+  <div class="sfr3ititle">
+    <div class="sfr3ititlebody">
+      <div class="sfr3ititlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="rojzftitlebodylang">
+      <div class="sfr3ititlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="rojzfChildren">
-    <div class="rojzfbody">
-      <a href="/tr/"><img src="/img/logo.svg?v=fawhb" class="rojzfbodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="sfr3iChildren">
+    <div class="sfr3ibody">
+      <a href="/tr/"><img src="/img/logo.svg?v=bxw0a" class="sfr3ibodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="rojzfmenumobil">
+    <div class="sfr3imenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="rojzfmenulist">
+    <div class="sfr3imenulist">
       <ul>
-        <a href="/tr/" class="rojzfmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="rojzfmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="rojzfmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="rojzfmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="rojzfmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="rojzfmenuitem">İletişim</a>
+        <a href="/tr/" class="sfr3imenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="sfr3imenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="sfr3imenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="sfr3imenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="sfr3imenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="sfr3imenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".rojzfmenumobil")
+    .querySelector(".sfr3imenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".rojzfmenulist");
+      const menu = document.querySelector(".sfr3imenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,41 +72,29 @@
     });
 </script>
 </div>
-  <div id="content"><div class="g8vyq-title f36">
+  <div id="content"><div class="lavd8-title f36">
   <span>Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</span>
 </div>
-<div class="g8vyq">
-  <div class="g8vyq-menu-btn">
+<div class="lavd8">
+  <div class="lavd8-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="g8vyq-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a class="active"  href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
-  <div class="g8vyq-desc">
+  <div class="lavd8-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a class="active"  href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
+  <div class="lavd8-desc">
     
-    <div class="g8vyq-desc-body">
-            <img src="/page/rontgen_mamografi/vm2bm.jpg?v=fawhb" width="100%" alt="{{title}}" />
+    <div class="lavd8-desc-body">
+            <img src="/page/rontgen_mamografi/ssc4q.jpg?v=bxw0a" width="100%" alt="{{title}}" />
     </div>
-    <div class="g8vyq-body"><p><h2 style="font-size: 24px;">RÖNTGEN VE MAMOGRAFİ ODALARININ PROJELENDİRİLMESİ VE YAPIMI</h2></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Röntgen ve mamografi odalarının projelendirilmesi, kurşun kaplanması ve anahtar teslim yapımı hizmetleri konusunda uzman ekibimizle hizmet veriyoruz. Firmamız 23 yıllık deneyim ve birikimi ile bu sektörde bilgi ve birikimi en profesyonel şekilde çalışan 40 Doktor, 40 Tıbbi Sekreter ve 5 Teknik personelden oluşan güçlü kadrosu ile hizmet vermektedir. Röntgen ve mamografi odalarının projelendirilmesi, radyasyon güvenliği açısından kritik önem taşıyan bir süreçtir.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Röntgen odalarının projelendirilmesinde, odanın boyutları, kurşun kaplama kalınlığı, havalandırma sistemi, elektrik tesisatı, soğutma sistemi gibi teknik detaylar özenle hesaplanır. Kurşun kaplama, radyasyonun dış ortama yayılmasını önlemek için gerekli olan en önemli güvenlik önlemidir. Röntgen cihazının gücüne göre kurşun kaplama kalınlığı belirlenir ve bu kalınlık standartlara uygun şekilde uygulanır. Mamografi odalarında ise, düşük doz radyasyon kullanımı nedeniyle özel güvenlik önlemleri alınır.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Anahtar teslim röntgen ve mamografi odası yapımı hizmetimizde, projelendirmeden başlayarak, inşaat, kurşun kaplama, elektrik tesisatı, havalandırma sistemi, soğutma sistemi, röntgen ve mamografi cihazlarının montajı ve devreye alınmasına kadar tüm süreçleri yönetiyoruz. Uzman ekibimiz, ulusal ve uluslararası standartlara uygun şekilde çalışarak, güvenli ve verimli röntgen ve mamografi odaları kurulumu gerçekleştiriyoruz. Tüm projelerimizde kalite kontrol süreçlerini titizlikle uygulayarak, müşteri memnuniyetini ön planda tutuyoruz.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Röntgen ve mamografi odalarının projelendirilmesi ve yapımı sürecinde, müşterilerimizin ihtiyaçlarına göre özel çözümler üretiyoruz. Mevcut yapıların güçlendirilmesi, yeni röntgen ve mamografi odası inşaatı, eski odaların yenilenmesi gibi farklı projelerde deneyimli ekibimizle hizmet veriyoruz. Projelerimizde kullandığımız malzemeler, ulusal ve uluslararası standartlara uygun, kaliteli ve dayanıklı malzemelerdir. Röntgen ve mamografi odası projelerimizde, radyasyon güvenliği, çevre güvenliği ve personel güvenliği önceliklerimizdir.</p>
-<p>    </p></p></div>
+    <div class="lavd8-body"></div>
   </div>
 </div>
 
 <script>
   document
-    .querySelector(".g8vyq-menu-btn")
+    .querySelector(".lavd8-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".g8vyq-menu").classList.toggle("active");
+      document.querySelector(".lavd8-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -172,7 +160,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=fawhb"></script>
-<script src="/src/cookie.js?v=fawhb"></script>
+<script type="text/javascript" src="/src/js.js?v=bxw0a"></script>
+<script src="/src/cookie.js?v=bxw0a"></script>
 
 </html>
