--- a/tr/teleradyolojik-raporlama-hizmeti/index.html
+++ b/tr/teleradyolojik-raporlama-hizmeti/index.html
@@ -9,14 +9,14 @@
   <meta http-equiv="Page-Enter" content="BlendTrans(Duration"="0)" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <title>Teleradyolojik Raporlama Hizmeti</title>
-  <meta name="description" content="Uzaktan raporlama, radyolojik görüntülerin uzman radyolog doktorlar tarafından çekim yapılan yerin dışında değerlendirilmesi ve rapor yazılması hizmetidir." />
-  <meta name="keywords" content="teleradyoloji, uzaktan raporlama, radyoloji hizmetleri, pacs sistemi, mri raporlama, bt raporlama" />
+  <meta name="description" content="[object Object]" />
+  <meta name="keywords" content="[object Object]" />
   <meta property="og:title" content="Teleradyolojik Raporlama Hizmeti" />
-  <meta property="og:description" content="Uzaktan raporlama, radyolojik görüntülerin uzman radyolog doktorlar tarafından çekim yapılan yerin dışında değerlendirilmesi ve rapor yazılması hizmetidir." />
-  <meta property="og:image" content="https://atlantisradyoloji.com/page/teleradyoloji/zks8k.jpg" />
+  <meta property="og:description" content="[object Object]" />
+  <meta property="og:image" content="https://atlantisradyoloji.com/page/teleradyoloji/gr8cg.jpg" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=fp2yz" />
-  <link rel="shortcut icon" href="/img/icon.png?v=fp2yz" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=nk0rc" />
+  <link rel="shortcut icon" href="/img/icon.png?v=nk0rc" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=fp2yz"></script>
-<link rel="stylesheet" href="style.css?v=fp2yz">
+  <script type="text/javascript" src="/src/firebase.js?v=nk0rc"></script>
+<link rel="stylesheet" href="style.css?v=nk0rc">
 </head>
 
 <body>
-  <div id="header"><div class="zmx6v">
-  <div class="zmx6vtitle">
-    <div class="zmx6vtitlebody">
-      <div class="zmx6vtitlebodytitle">
+  <div id="header"><div class="q9itg">
+  <div class="q9itgtitle">
+    <div class="q9itgtitlebody">
+      <div class="q9itgtitlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="zmx6vtitlebodylang">
+      <div class="q9itgtitlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="zmx6vChildren">
-    <div class="zmx6vbody">
-      <a href="/tr/"><img src="/img/logo.svg?v=fp2yz" class="zmx6vbodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="q9itgChildren">
+    <div class="q9itgbody">
+      <a href="/tr/"><img src="/img/logo.svg?v=nk0rc" class="q9itgbodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="zmx6vmenumobil">
+    <div class="q9itgmenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="zmx6vmenulist">
+    <div class="q9itgmenulist">
       <ul>
-        <a href="/tr/" class="zmx6vmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="zmx6vmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="zmx6vmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="zmx6vmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="zmx6vmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="zmx6vmenuitem">İletişim</a>
+        <a href="/tr/" class="q9itgmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="q9itgmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="q9itgmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="q9itgmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="q9itgmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="q9itgmenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".zmx6vmenumobil")
+    .querySelector(".q9itgmenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".zmx6vmenulist");
+      const menu = document.querySelector(".q9itgmenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,41 +72,29 @@
     });
 </script>
 </div>
-  <div id="content"><div class="jabs2-title f36">
+  <div id="content"><div class="nvdqp-title f36">
   <span>Teleradyolojik Raporlama Hizmeti</span>
 </div>
-<div class="jabs2">
-  <div class="jabs2-menu-btn">
+<div class="nvdqp">
+  <div class="nvdqp-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="jabs2-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a class="active"  href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
-  <div class="jabs2-desc">
+  <div class="nvdqp-menu"><a   href="/tr/btodasi" >Bilgisayarlı Tomografi Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/danismanlik-hizmetleri" >Danışmanlık Hizmetleri</a><a   href="/tr/dopplerultrason" >Doppler ve Ultrasonografi Hizmeti</a><a   href="/tr/hastanelerde-pacs-ve-arsivleme-hizmeti" >Hastanelerde PACS ve Arşivleme Hizmeti</a><a   href="/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi" >Manyetik Rezonans Görüntüleme Cihaz Odalarının Projelendirilmesi ve Yapımı</a><a   href="/tr/radyoloji-bolumu-isletme-hizmeti" >Radyoloji Bölümü İşletme Hizmeti</a><a   href="/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el" >Radyoloji Cihaz Satışı (Sıfır ve İkinci El)</a><a   href="/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini" >Radyolojik Cihazların Bakım, Onarım ve Yedek Parça Temini</a><a   href="/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti" >Radyolojik Cihazların TAEK Lisanslamada Danışmanlık Hizmeti</a><a   href="/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi" >Röntgen ve Mamografi Odalarının Projelendirilmesi ve Yapımı</a><a class="active"  href="/tr/teleradyolojik-raporlama-hizmeti" >Teleradyolojik Raporlama Hizmeti</a></div>
+  <div class="nvdqp-desc">
     
-    <div class="jabs2-desc-body">
-            <img src="/page/teleradyoloji/zks8k.jpg?v=fp2yz" width="100%" alt="{{title}}" />
+    <div class="nvdqp-desc-body">
+            <img src="/page/teleradyoloji/gr8cg.jpg?v=nk0rc" width="100%" alt="{{title}}" />
     </div>
-    <div class="jabs2-body"><p><h2 style="font-size: 24px;">TELERADYOLOJİK RAPORLAMA HİZMETİ</h2></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Dünyada hızla gelişmekte olan tanısal görüntüleme imajlarının paylaşımı ve arşivleme konusunda ülkemizdeki ihtiyaçları karşılamak ve en doğru tanısal raporların oluşturulması için konusunda deneyimli radyoloji uzmanlarımız ve raporörlerimizin bir araya gelmesi ile kurulan ATLANTİS RADYOLOJİ GÖRÜNTÜLEME SAĞLIK HİZMETLERİ LİMİTED ŞİRKETİ, hizmet verdiğimiz hastanelerde çekilmiş MRI (Manyetik Rezonans Görüntüleme), MRI anjiyografi, BT (Bilgisayarlı Tomografi), BT Anjiyografi, mamografi, Dijital Röntgen ve Sintigrafi (Nükleer Tıp) tetkik imajlarını dünyada bulunan görüntü transferi ve raporlama da kullanılan PACS yazılımı ile teleradyoloji raporlarını dünyanın her yerinden internet üzerinden yapma imkânı sağlıyor.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Uzaktan raporlama, radyolojik görüntülerin, konusunda uzman radyolog doktorlar tarafından çekim yapılan yerin dışındaki herhangi başka bir yerde, kentte veya ülkede değerlendirilmesi ve görüntülere rapor yazılması demektir. Yurt dışında uzun yıllardır uygulanan bu sistem, ülkemizde bu sektörde rol alan firmamız ATLANTİS RADYOLOJİ GÖRÜNTÜLEME SAĞLIK HİZMETLERİ olarak başarılı bir şekilde hizmet vermektedir. Uzaktan raporlama hızı teknolojik gelişmelere paralel olarak giderek artmıştır.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Uzman radyoloji hekiminin olmadığı yerlerde, özellikle acil servisler için uzaktan raporlama hizmeti hayat kurtarıcı olabilir. Yeterli sayıda radyoloji uzmanı olmayan veya uzman görüşü istenen tetkiklerde uzaktan raporlama kolay ve ekonomik bir çözümdür. Firmamız gece, gündüz, hafta sonu, tatil günleri de dahil olmak üzere şehir ya da ülke ayırımı yapmadan 7 gün 24 saat raporlama hizmeti vermektedir. Acil hastalarda ise 1 saat içerisinde raporlama yapılmakta ve dünyanın her yerine ulaştırılmaktadır.</p>
-<p>    </p></p>
-<p>    <p style="font-size: 16px;"></p>
-<p>        Firmamız 23 yıllık deneyim ve birikimi ile bu sektörde bilgi ve birikimi en profesyonel şekilde çalışan 40 Doktor, 40 Tıbbi Sekreter ve 5 Teknik personelden oluşan güçlü kadrosu ile hizmet vermektedir. Şirketimiz bu güne kadar toplamda 5.000.000 adet raporlama yapmış olup aylık ortalama 150.000 adet raporlama yapmakta ve her geçen gün yeni hastaneler bünyesine katarak büyümeye devam etmektedir.</p>
-<p>    </p></p></div>
+    <div class="nvdqp-body"></div>
   </div>
 </div>
 
 <script>
   document
-    .querySelector(".jabs2-menu-btn")
+    .querySelector(".nvdqp-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".jabs2-menu").classList.toggle("active");
+      document.querySelector(".nvdqp-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -172,7 +160,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=fp2yz"></script>
-<script src="/src/cookie.js?v=fp2yz"></script>
+<script type="text/javascript" src="/src/js.js?v=nk0rc"></script>
+<script src="/src/cookie.js?v=nk0rc"></script>
 
 </html>
