--- a/tr/vizyon/index.html
+++ b/tr/vizyon/index.html
@@ -15,8 +15,8 @@
   <meta property="og:description" content="Atlantis Radyoloji vizyonu - Teleradyoloji sektöründe Türkiye'nin lider firması olmak ve dünya çapında tanınan bir marka haline gelmek." />
   <meta property="og:image" content="https://atlantisradyoloji.com/img/icon.png" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=hsmkr" />
-  <link rel="shortcut icon" href="/img/icon.png?v=hsmkr" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=lkrxq" />
+  <link rel="shortcut icon" href="/img/icon.png?v=lkrxq" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=hsmkr"></script>
-<link rel="stylesheet" href="style.css?v=hsmkr">
+  <script type="text/javascript" src="/src/firebase.js?v=lkrxq"></script>
+<link rel="stylesheet" href="style.css?v=lkrxq">
 </head>
 
 <body>
-  <div id="header"><div class="qjq8j">
-  <div class="qjq8jtitle">
-    <div class="qjq8jtitlebody">
-      <div class="qjq8jtitlebodytitle">
+  <div id="header"><div class="gafgz">
+  <div class="gafgztitle">
+    <div class="gafgztitlebody">
+      <div class="gafgztitlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="qjq8jtitlebodylang">
+      <div class="gafgztitlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="qjq8jChildren">
-    <div class="qjq8jbody">
-      <a href="/tr/"><img src="/img/logo.svg?v=hsmkr" class="qjq8jbodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="gafgzChildren">
+    <div class="gafgzbody">
+      <a href="/tr/"><img src="/img/logo.svg?v=lkrxq" class="gafgzbodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="qjq8jmenumobil">
+    <div class="gafgzmenumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="qjq8jmenulist">
+    <div class="gafgzmenulist">
       <ul>
-        <a href="/tr/" class="qjq8jmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="qjq8jmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="qjq8jmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="qjq8jmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="qjq8jmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="qjq8jmenuitem">İletişim</a>
+        <a href="/tr/" class="gafgzmenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="gafgzmenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="gafgzmenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="gafgzmenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="gafgzmenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="gafgzmenuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".qjq8jmenumobil")
+    .querySelector(".gafgzmenumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".qjq8jmenulist");
+      const menu = document.querySelector(".gafgzmenulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,18 +72,18 @@
     });
 </script>
 </div>
-  <div id="content"><div class="b3wsr-title f36">
+  <div id="content"><div class="a631d-title f36">
   <span>Vizyon</span>
 </div>
-<div class="b3wsr">
-  <div class="b3wsr-menu-btn">
+<div class="a631d">
+  <div class="a631d-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="b3wsr-menu"><a   href="/tr/hakkimizda" >Hakkımızda</a><a   href="/tr/misyon" >Misyon</a><a class="active"  href="/tr/vizyon" >Vizyon</a><a   href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a   href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a   href="/tr/kisisel-veriler" >Kişisel Veriler</a><a   href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a   href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
-  <div class="b3wsr-desc">
+  <div class="a631d-menu"><a   href="/tr/hakkimizda" >Hakkımızda</a><a   href="/tr/misyon" >Misyon</a><a class="active"  href="/tr/vizyon" >Vizyon</a><a   href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a   href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a   href="/tr/kisisel-veriler" >Kişisel Veriler</a><a   href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a   href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
+  <div class="a631d-desc">
     
-    <div class="b3wsr-body"><p><h2 style="font-size: 24px;">ATLANTİS RADYOLOJİ VİZYONUMUZ</h2></p>
+    <div class="a631d-body"><p><h2 style="font-size: 24px;">ATLANTİS RADYOLOJİ VİZYONUMUZ</h2></p>
 <p>    <p style="font-size: 16px;"></p>
 <p>        Vizyonumuz, teleradyoloji sektöründe Türkiye'nin en güvenilir ve tercih edilen firması olmak ve dünya çapında tanınan bir marka haline gelmektir. 23 yıllık deneyimimizle bugüne kadar 5.000.000 adet raporlama gerçekleştirmiş olup, aylık ortalama 150.000 adet raporlama yaparak sektördeki liderliğimizi sürdürmekteyiz. Her geçen gün yeni hastaneler bünyesine katarak büyümeye devam eden firmamız, sektörün gelişimine paralel olarak kendini sürekli yenilemektedir.</p>
 <p>    </p></p>
@@ -98,9 +98,9 @@
 
 <script>
   document
-    .querySelector(".b3wsr-menu-btn")
+    .querySelector(".a631d-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".b3wsr-menu").classList.toggle("active");
+      document.querySelector(".a631d-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -166,7 +166,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=hsmkr"></script>
-<script src="/src/cookie.js?v=hsmkr"></script>
+<script type="text/javascript" src="/src/js.js?v=lkrxq"></script>
+<script src="/src/cookie.js?v=lkrxq"></script>
 
 </html>
