--- a/tr/yasal-uyari/index.html
+++ b/tr/yasal-uyari/index.html
@@ -15,8 +15,8 @@
   <meta property="og:description" content="Atlantis Radyoloji yasal uyarı - Fikir ve Sanat Eserleri Kanunu ve internet yayıncılığı yasal düzenlemeleri." />
   <meta property="og:image" content="https://atlantisradyoloji.com/img/icon.png" />
   <meta name="robots" content="index, follow" />
-  <link rel="stylesheet" href="/src/css.css?v=tm2g0" />
-  <link rel="shortcut icon" href="/img/icon.png?v=tm2g0" type="image/png" />
+  <link rel="stylesheet" href="/src/css.css?v=eqi1o" />
+  <link rel="shortcut icon" href="/img/icon.png?v=eqi1o" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -26,34 +26,34 @@
   <script src="/src/swiper-bundle.min.js"></script>
   
 
-  <script type="text/javascript" src="/src/firebase.js?v=tm2g0"></script>
-<link rel="stylesheet" href="style.css?v=tm2g0">
+  <script type="text/javascript" src="/src/firebase.js?v=eqi1o"></script>
+<link rel="stylesheet" href="style.css?v=eqi1o">
 </head>
 
 <body>
-  <div id="header"><div class="cn1ru">
-  <div class="cn1rutitle">
-    <div class="cn1rutitlebody">
-      <div class="cn1rutitlebodytitle">
+  <div id="header"><div class="a3yq7">
+  <div class="a3yq7title">
+    <div class="a3yq7titlebody">
+      <div class="a3yq7titlebodytitle">
         Atlantis Radyoloji Web Sitemize Hoşgeldiniz
       </div>
-      <div class="cn1rutitlebodylang">
+      <div class="a3yq7titlebodylang">
         <ul>
           <li><a href="/tr/"><img height="25" src="/src/lang/tr.png"  alt="tr"></a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="cn1ruChildren">
-    <div class="cn1rubody">
-      <a href="/tr/"><img src="/img/logo.svg?v=tm2g0" class="cn1rubodylogo" alt="Atlantis Radyoloji Logo" /></a>
+  <div class="a3yq7Children">
+    <div class="a3yq7body">
+      <a href="/tr/"><img src="/img/logo.svg?v=eqi1o" class="a3yq7bodylogo" alt="Atlantis Radyoloji Logo" /></a>
     </div>
-    <div class="cn1rumenumobil">
+    <div class="a3yq7menumobil">
       <div class="material-symbols-outlined">menu</div>
     </div>
-    <div class="cn1rumenulist">
+    <div class="a3yq7menulist">
       <ul>
-        <a href="/tr/" class="cn1rumenuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="cn1rumenuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="cn1rumenuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="cn1rumenuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="cn1rumenuitem">Referanslarımız</a><a href="/tr/iletisim/" class="cn1rumenuitem">İletişim</a>
+        <a href="/tr/" class="a3yq7menuitem">Anasayfa </a><a href="/tr/hakkimizda/" class="a3yq7menuitem">Kurumsal</a><a href="/tr/hizmetlerimiz/" class="a3yq7menuitem">Hizmetlerimiz</a><a href="/tr/e-katalog/" class="a3yq7menuitem">E-Katalog</a><a href="/tr/referanslarimiz/" class="a3yq7menuitem">Referanslarımız</a><a href="/tr/iletisim/" class="a3yq7menuitem">İletişim</a>
       </ul>
     </div>
   </div>
@@ -61,9 +61,9 @@
 
 <script>
   document
-    .querySelector(".cn1rumenumobil")
+    .querySelector(".a3yq7menumobil")
     .addEventListener("click", function () {
-      const menu = document.querySelector(".cn1rumenulist");
+      const menu = document.querySelector(".a3yq7menulist");
       if (menu.style.display === "flex") {
         menu.style.display = "none";
       } else {
@@ -72,18 +72,18 @@
     });
 </script>
 </div>
-  <div id="content"><div class="mow41-title f36">
+  <div id="content"><div class="m207n-title f36">
   <span>Yasal Uyarı</span>
 </div>
-<div class="mow41">
-  <div class="mow41-menu-btn">
+<div class="m207n">
+  <div class="m207n-menu-btn">
     <span>Menü</span>
     <i class="fas fa-bars"></i>
   </div>
-  <div class="mow41-menu"><a   href="/tr/hakkimizda" >Hakkımızda</a><a   href="/tr/misyon" >Misyon</a><a   href="/tr/vizyon" >Vizyon</a><a   href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a   href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a   href="/tr/kisisel-veriler" >Kişisel Veriler</a><a   href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a class="active"  href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
-  <div class="mow41-desc">
+  <div class="m207n-menu"><a   href="/tr/hakkimizda" >Hakkımızda</a><a   href="/tr/misyon" >Misyon</a><a   href="/tr/vizyon" >Vizyon</a><a   href="/tr/kalite-politikamiz" >Kalite Politikamız</a><a   href="/tr/gizlilik-politikasi" >Gizlilik Politikası</a><a   href="/tr/kisisel-veriler" >Kişisel Veriler</a><a   href="/tr/kullanici-haklari" >Kullanıcı Hakları</a><a class="active"  href="/tr/yasal-uyari" >Yasal Uyarı</a></div>
+  <div class="m207n-desc">
     
-    <div class="mow41-body"><p><h2 style="font-size: 24px;">Yasal Uyarı</h2></p>
+    <div class="m207n-body"><p><h2 style="font-size: 24px;">Yasal Uyarı</h2></p>
 <p>    <p style=" font-size: 16px;"></p>
 <p>        Sitemizde yer alan tüm içerik, 5846 sayılı Fikir ve Sanat Eserleri Kanunu ile 5651 sayılı İnternet Ortamında Yapılan Yayınların Düzenlenmesi ve Bu Yayınlar Yoluyla İşlenen Suçlarla Mücadele Edilmesi Hakkında Kanun'un hükümleri uyarınca korunmaktadır. Sitemizde yer alan hiçbir içeriğin kopyalanması, çoğaltılması, yayılması, satılması, dağıtılması, sergilenmesi, yayımlanması, herhangi bir şekilde ticari amaçla kullanılması veya başka platformlarda izinsiz olarak paylaşılması yasaktır. Bu kurallara aykırı hareket edenler, ilgili kanunlar kapsamında hukuki ve cezai yaptırımlarla karşılaşabilirler. </p></p>
 <p>    <p style=" font-size: 16px;"></p>
@@ -95,9 +95,9 @@
 
 <script>
   document
-    .querySelector(".mow41-menu-btn")
+    .querySelector(".m207n-menu-btn")
     .addEventListener("click", function () {
-      document.querySelector(".mow41-menu").classList.toggle("active");
+      document.querySelector(".m207n-menu").classList.toggle("active");
       const icon = this.querySelector("i");
       icon.classList.toggle("fa-bars");
       icon.classList.toggle("fa-times");
@@ -163,7 +163,7 @@
 
 
 
-<script type="text/javascript" src="/src/js.js?v=tm2g0"></script>
-<script src="/src/cookie.js?v=tm2g0"></script>
+<script type="text/javascript" src="/src/js.js?v=eqi1o"></script>
+<script src="/src/cookie.js?v=eqi1o"></script>
 
 </html>
